--- a/信息披露/上市公司信息披露管理办法.html
+++ b/信息披露/上市公司信息披露管理办法.html
@@ -110,5 +110,12 @@
 <h1 id="第七章-附则">第七章 附则</h1>
 <p>　　第七十一条 本办法下列用语的含义：<br />　　（一）为信息披露义务人履行信息披露义务出具专项文件的保荐人、证券服务机构，是指为证券发行、上市、交易等证券业务活动制作、出具保荐书、审计报告、资产评估报告、法律意见书、财务顾问报告、资信评级报告等文件的保荐人、会计师事务所、资产评估机构、律师事务所、财务顾问机构、资信评级机构。<br />　　（二）及时，是指自起算日起或者触及披露时点的两个交易日内。<br />　　（三）上市公司的关联交易，是指上市公司或者其控股子公司与上市公司关联人之间发生的转移资源或者义务的事项。<br />　　关联人包括关联法人和关联自然人。<br />　　具有以下情形之一的法人，为上市公司的关联法人：<br />　　1．直接或者间接地控制上市公司的法人；<br />　　2．由前项所述法人直接或者间接控制的除上市公司及其控股子公司以外的法人；<br />　　3．关联自然人直接或者间接控制的、或者担任董事、高级管理人员的，除上市公司及其控股子公司以外的法人；<br />　　4．持有上市公司5%以上股份的法人或者一致行动人；<br />　　5．在过去12个月内或者根据相关协议安排在未来12月内，存在上述情形之一的；<br />　　6．中国证监会、证券交易所或者上市公司根据实质重于形式的原则认定的其他与上市公司有特殊关系，可能或者已经造成上市公司对其利益倾斜的法人。<br />　　具有以下情形之一的自然人，为上市公司的关联自然人：<br />　　1．直接或者间接持有上市公司5%以上股份的自然人；<br />　　2．上市公司董事、监事及高级管理人员；<br />　　3．直接或者间接地控制上市公司的法人的董事、监事及高级管理人员；<br />　　4．上述第1、2项所述人士的关系密切的家庭成员，包括配偶、父母、年满18周岁的子女及其配偶、兄弟姐妹及其配偶，配偶的父母、兄弟姐妹，子女配偶的父母；<br />　　5．在过去12个月内或者根据相关协议安排在未来12个月内，存在上述情形之一的；<br />　　6．中国证监会、证券交易所或者上市公司根据实质重于形式的原则认定的其他与上市公司有特殊关系，可能或者已经造成上市公司对其利益倾斜的自然人。<br />　　（四）指定媒体，是指中国证监会指定的报刊和网站。</p>
 <p>　　第七十二条 本办法自公布之日起施行。《公开发行股票公司信息披露实施细则》（试行）（证监上字[1993]43号）、《关于股票公开发行与上市公司信息披露有关事项的通知》（证监研字[1993]19号）、《关于加强对上市公司临时报告审查的通知》（证监上字[1996]26号）、《关于上市公司发布澄清公告若干问题的通知》（证监上字[1996]28号）、《上市公司披露信息电子存档事宜的通知》（证监信字[1998]50号）、《关于进一步加强ST、PT公司信息披露监管工作的通知》（证监公司字[2000]63号）、《关于拟发行新股的上市公司中期报告有关问题的通知》（证监公司字[2001]69号）、《关于上市公司临时公告及相关附件报送中国证监会派出机构备案的通知》（证监公司字[2003]7号）同时废止。</p>
+<div id="foot">
+
+本站所有内容全部来自于互联网，并经过@songliheng的精心收集、整理汇编而成</br></br>
+
+欢迎提出建议，交流邮箱songliheng_live_com
+
+</div>
 </body>
 </html>
