--- a/信息披露/公开发行证券的公司信息披露内容与格式准则.html
+++ b/信息披露/公开发行证券的公司信息披露内容与格式准则.html
@@ -51,5 +51,12 @@
 <p><del>1. 上市公司信息披露内容与格式准则第21号-</del></p>
 <p><del>1. 上市公司信息披露内容与格式准则第22号-</del></p>
 <p><del>1. 上市公司信息披露内容与格式准则第27号-</del></p>
+<div id="foot">
+
+本站所有内容全部来自于互联网，并经过@songliheng的精心收集、整理汇编而成</br></br>
+
+欢迎提出建议，交流邮箱songliheng_live_com
+
+</div>
 </body>
 </html>
