--- a/信息披露/公开发行证券的公司信息披露编报规则.html
+++ b/信息披露/公开发行证券的公司信息披露编报规则.html
@@ -33,5 +33,12 @@
 <li>公开发行证券的公司信息披露编报规则第13号——季度报告内容与格式特别规定（2013年修订）</li>
 <li>公开发行证券的公司信息披露编报规则第20号——创业板上市公司季度报告的内容与格式（2013年修订）</li>
 </ol>
+<div id="foot">
+
+本站所有内容全部来自于互联网，并经过@songliheng的精心收集、整理汇编而成</br></br>
+
+欢迎提出建议，交流邮箱songliheng_live_com
+
+</div>
 </body>
 </html>
