--- a/信息披露/公开发行证券的公司信息披露解释性公告.html
+++ b/信息披露/公开发行证券的公司信息披露解释性公告.html
@@ -29,5 +29,12 @@
 <li>公开发行证券的公司信息披露规范问答第6号——支付会计师事务所报酬及其披露</li>
 <li>公开发行证券的公司信息披露规范问答第7号――新旧会计准则过渡期间比较财务会计信息的编制和披露</li>
 </ol>
+<div id="foot">
+
+本站所有内容全部来自于互联网，并经过@songliheng的精心收集、整理汇编而成</br></br>
+
+欢迎提出建议，交流邮箱songliheng_live_com
+
+</div>
 </body>
 </html>
