--- a/股权变动/上市公司重大资产重组管理办法.html
+++ b/股权变动/上市公司重大资产重组管理办法.html
@@ -37,7 +37,7 @@
 <h1 id="第二章重大资产重组的原则和标准">第二章　重大资产重组的原则和标准</h1>
 <p>　　第十条 　上市公司实施重大资产重组，应当符合下列要求：<br />　　（一）符合国家产业政策和有关环境保护、土地管理、反垄断等法律和行政法规的规定；<br />　　（二）不会导致上市公司不符合股票上市条件；<br />　　（三）重大资产重组所涉及的资产定价公允，不存在损害上市公司和股东合法权益的情形；<br />　　（四）重大资产重组所涉及的资产权属清晰，资产过户或者转移不存在法律障碍，相关债权债务处理合法；<br />　　（五）有利于上市公司增强持续经营能力，不存在可能导致上市公司重组后主要资产为现金或者无具体经营业务的情形；<br />　　（六）有利于上市公司在业务、资产、财务、人员、机构等方面与实际控制人及其关联人保持独立，符合中国证监会关于上市公司独立性的相关规定；<br />　　（七）有利于上市公司形成或者保持健全有效的法人治理结构。</p>
 <p>　　第十一条 　 上市公司及其控股或者控制的公司购买、出售资产，达到下列标准之一的，构成重大资产重组：<br />　　（一）购买、出售的资产总额占上市公司最近一个会计年度经审计的合并财务会计报告期末资产总额的比例达到50%以上；<br />　　（二）购买、出售的资产在最近一个会计年度所产生的营业收入占上市公司同期经审计的合并财务会计报告营业收入的比例达到50%以上；<br />　　（三）购买、出售的资产净额占上市公司最近一个会计年度经审计的合并财务会计报告期末净资产额的比例达到50%以上，且超过5000万元人民币。<br />　　购买、出售资产未达到前款规定标准，但中国证监会发现存在可能损害上市公司或者投资者合法权益的重大问题的，可以根据审慎监管原则责令上市公司按照本办法的规定补充披露相关信息、暂停交易并报送申请文件。</p>
-<p>　　第十二条 　 自控制权发生变更之日起，上市公司向收购人购买的资产总额，占上市公司控制权发生变更的前一个会计年度经审计的合并财务会计报告期末资产总额的比例达到100%以上的，除符合本办法第十条、第四十二条规定的要求外，上市公司购买的资产对应的经营实体持续经营时间应当在3年以上，最近两个会计年度净利润均为正数且累计超过人民币2000万元。上市公司购买的资产属于金融、创业投资等特定行业的，由中国证监会另行规定。<br />　　前款规定的重大资产重组完成后，上市公司应当符合中国证监会关于上市公司治理与规范运作的相关规定，在业务、资产、财务、人员、机构等方面独立于控股股东、实际控制人及其控制的其他企业，与控股股东、实际控制人及其控制的其他企业间不存在同业竞争或者显失公平的关联交易。</p>
+<p>　　第十二条 　 自控制权发生变更之日起，上市公司向收购人<em>购买的资产总额，占上市公司</em>控制权发生变更的前一个会计年度经审计的合并财务会计报告期末资产总额的比例达到<em>100%以上的</em>，除符合本办法第十条、第四十二条规定的要求外，<em>上市公司购买的资产对应的经营实体持续经营时间应当在3年以上，最近两个会计年度净利润均为正数且累计超过人民币2000万元。</em>上市公司购买的资产属于金融、创业投资等特定行业的，由中国证监会另行规定。<br />　　前款规定的重大资产重组完成后，上市公司应当符合中国证监会关于上市公司治理与规范运作的相关规定，在业务、资产、财务、人员、机构等方面独立于控股股东、实际控制人及其控制的其他企业，与控股股东、实际控制人及其控制的其他企业间不存在同业竞争或者显失公平的关联交易。</p>
 <p>　　第十三条 　 计算本办法第十一条、第十二条规定的比例时，应当遵守下列规定：<br />　　（一）购买的资产为股权的，其资产总额以被投资企业的资产总额与该项投资所占股权比例的乘积和成交金额二者中的较高者为准，营业收入以被投资企业的营业收入与该项投资所占股权比例的乘积为准，资产净额以被投资企业的净资产额与该项投资所占股权比例的乘积和成交金额二者中的较高者为准；出售的资产为股权的，其资产总额、营业收入以及资产净额分别以被投资企业的资产总额、营业收入以及净资产额与该项投资所占股权比例的乘积为准。<br />　　购买股权导致上市公司取得被投资企业控股权的，其资产总额以被投资企业的资产总额和成交金额二者中的较高者为准，营业收入以被投资企业的营业收入为准，资产净额以被投资企业的净资产额和成交金额二者中的较高者为准；出售股权导致上市公司丧失被投资企业控股权的，其资产总额、营业收入以及资产净额分别以被投资企业的资产总额、营业收入以及净资产额为准。<br />　　（二）购买的资产为非股权资产的，其资产总额以该资产的账面值和成交金额二者中的较高者为准，资产净额以相关资产与负债的账面值差额和成交金额二者中的较高者为准；出售的资产为非股权资产的，其资产总额、资产净额分别以该资产的账面值、相关资产与负债账面值的差额为准；该非股权资产不涉及负债的，不适用第十一条第一款第（三）项规定的资产净额标准。<br />　　（三）上市公司同时购买、出售资产的，应当分别计算购买、出售资产的相关比例，并以二者中比例较高者为准。<br />　　（四）上市公司在12个月内连续对同一或者相关资产进行购买、出售的，以其累计数分别计算相应数额。已按照本办法的规定报经中国证监会核准的资产交易行为，无须纳入累计计算的范围，但本办法第十二条规定情形除外。<br />　　交易标的资产属于同一交易方所有或者控制，或者属于相同或者相近的业务范围，或者中国证监会认定的其他情形下，可以认定为同一或者相关资产。</p>
 <p>　　第十四条 本办法第二条所称通过其他方式进行资产交易，包括：<br />　　（一）与他人新设企业、对已设立的企业增资或者减资；<br />　　（二）受托经营、租赁其他企业资产或者将经营性资产委托他人经营、租赁；<br />　　（三）接受附义务的资产赠与或者对外捐赠资产；<br />　　（四）中国证监会根据审慎监管原则认定的其他情形。<br />　　上述资产交易实质上构成购买、出售资产，且按照本办法规定的标准计算的相关比例达到50%以上的，应当按照本办法的规定履行信息披露等相关义务并报送申请文件。</p>
 <h1 id="第三章重大资产重组的程序">第三章　重大资产重组的程序</h1>
@@ -90,5 +90,20 @@
 <p>　　第五十七条 　任何知悉重大资产重组信息的人员在相关信息依法公开前，泄露该信息、买卖或者建议他人买卖相关上市公司证券、利用重大资产重组散布虚假信息、操纵证券市场或者进行欺诈活动的，依照《证券法》第二百零二条、第二百零三条、第二百零七条予以处罚；涉嫌犯罪的，依法移送司法机关追究刑事责任。</p>
 <h1 id="第八章附则">第八章　附　则</h1>
 <p>　　第五十八条 　 本办法自2008年5月18日起施行。中国证监会发布的《关于上市公司重大购买、出售、置换资产若干问题的通知》（证监公司字〔2001〕105号）同时废止。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
