--- a/MarkDown语法帮助.html
+++ b/MarkDown语法帮助.html
@@ -27,6 +27,7 @@
 <li><a href="#定义环境">定义环境</a></li>
 <li><a href="#上标下标">上标下标</a></li>
 <li><a href="#pandoc幻灯片">Pandoc幻灯片</a></li>
+<li><a href="#头文件脚文件以及js引用">头文件、脚文件以及js引用</a></li>
 </ul>
 </div>
 <h1 id="标题">标题</h1>
@@ -345,5 +346,12 @@ Table: Here&#39;s the caption. It, too, may span multiple lines.</code></pre></l
 <pre><code>pandoc slides.md -o slides.html -t dzslides -s</code></pre>
 <p>内置Slidy</p>
 <pre><code> pandoc slides.md -o slides.html -t slidy -s</code></pre>
+<h1 id="头文件脚文件以及js引用">头文件、脚文件以及js引用</h1>
+<pre><code>-H FILE, --include-in-header=FILE</code></pre>
+<p>Include contents of FILE, verbatim, at the end of the header. This can be used, for example, to include special CSS or javascript in HTML documents. This option can be used repeatedly to include multiple files in the header. They will be included in the order specified. Implies --standalone.</p>
+<pre><code>-B FILE, --include-before-body=FILE</code></pre>
+Include contents of FILE, verbatim, at the beginning of the document body (e.g. after the
+<body> 
+tag in HTML, or the
 </body>
 </html>
