--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
 </ol>
 <h2 id="公司债券"><span class="header-section-number">2.3</span> 公司债券</h2>
 <ol style="list-style-type: decimal">
-<li>[企业债权管理条例]</li>
-<li>[公司债权发行试点办法]</li>
-<li>[上市公司股东发行可交换公司债券试行规定]</li>
+<li><a href="http://xining.pbc.gov.cn/publish/xining/4027/2013/20131231112136862880953/20131231112136862880953_.html">企业债权管理条例</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/zjhpublic/zjh/200804/t20080418_14512.htm">公司债权发行试点办法</a></li>
+<li><a href="http://www.gov.cn/gongbao/content/2009/content_1356211.htm">上市公司股东发行可交换公司债券试行规定</a></li>
 <li><a href="http://www.sasac.gov.cn/n1180/n1566/n258222/n259203/6509484.html">关于规范上市公司国有股东发行可交换公司债券及国有控股上市公司发行证券有关事项的通知</a></li>
 <li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/fx/gszj/201310/t20131016_236308.htm">关于创业板上市公司非公开发行公司债券的有关事项的公告</a></li>
 </ol>
 <h1 id="股权变动"><span class="header-section-number">3</span> 股权变动</h1>
 <h2 id="增持与减持"><span class="header-section-number">3.1</span> 增持与减持</h2>
 <ol style="list-style-type: decimal">
-<li>[上市公司回购社会公众股份管理办法（试行）]</li>
-<li>[关于上市公司以集中竞价交易方式回购股份的补充规定]</li>
-<li>[中国证券监管委员会关于上市公司控股股东在股权分置改革后增持社会公众股份有关问题的通知]</li>
+<li><a href="./股权变动/上市公司回购社会公众股份管理办法（试行）.html">上市公司回购社会公众股份管理办法（试行）</a></li>
+<li><a href="http://news.xinhuanet.com/fortune/2008-10/10/content_10172670.htm">关于上市公司以集中竞价交易方式回购股份的补充规定</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/bgcz/201012/t20101231_189614.htmhttp://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/bgcz/201012/t20101231_189614.htm">中国证券监管委员会关于上市公司控股股东在股权分置改革后增持社会公众股份有关问题的通知</a></li>
 </ol>
 <h2 id="国有股转让"><span class="header-section-number">3.2</span> 国有股转让</h2>
 <ol style="list-style-type: decimal">
-<li>[减持国有股筹集社会保障资金管理暂行办法]</li>
-<li>[国有单位受让上市公司股份管理暂行规定]</li>
-<li>[国有股东转让所持上市公司股份管理暂行办法]</li>
-<li>[上市公司国有股东标识管理暂行规定]</li>
-<li>[境内证券市场转持部分国有股充实全国社会保障基金实施办法]</li>
-<li>[财政部等关于豁免国有创业投资机构和国有创业投资引导基金国有股转持义务有关问题的通知]</li>
+<li><a href="http://www.ssf.gov.cn/xxgk/flfg/200904/t20090427_910.html">减持国有股筹集社会保障资金管理暂行办法</a></li>
+<li><a href="http://www.sasac.gov.cn/n1180/n1566/n258222/n259203/1735082.html">国有单位受让上市公司股份管理暂行规定</a></li>
+<li><a href="http://www.sasac.gov.cn/n1180/n1566/n258222/n259203/1733853.html">国有股东转让所持上市公司股份管理暂行办法</a></li>
+<li><a href="http://www.sasac.gov.cn/gzjg/cqgl/200707060071.htm">上市公司国有股东标识管理暂行规定</a></li>
+<li><a href="http://www.ssf.gov.cn/flfg/tzflfg/201205/t20120529_5275.html">境内证券市场转持部分国有股充实全国社会保障基金实施办法</a></li>
+<li><a href="http://qys.mof.gov.cn/zhengwuxinxi/zhengcefabu/201010/t20101026_344125.html">财政部等关于豁免国有创业投资机构和国有创业投资引导基金国有股转持义务有关问题的通知</a></li>
 </ol>
 <h2 id="并购重组"><span class="header-section-number">3.3</span> 并购重组</h2>
 <ol style="list-style-type: decimal">
@@ -105,33 +105,33 @@
 <li><a href="./股权变动/上市公司并购重组财务顾问业务管理办法.html">上市公司并购重组财务顾问业务管理办法</a></li>
 </ol>
 <p><!-- --></p>
-<p><!--   --></p>
 <ol style="list-style-type: decimal">
 <li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/ssyts/201401/t20140122_242991.htm">关于在借壳上市审核中严格执行首次公开发行股票上市标准的通知(2014)</a></li>
 <li><a href="http://www.gov.cn/zwgk/2010-09/06/content_1696450.htm">国务院关于促进企业兼并重组的意见</a></li>
 <li><a href="http://www.csrc.gov.cn/pub/newsite/fxb/gzdt/200710/t20071030_69306.htm">中国证券监督管理委员会关于在发行审核委员会中设立上市公司并购重组审核委员会的决定</a></li>
 <li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/bgcz/201012/t20101231_189631.htm">关于规范上市公司重大资产重组若干问题的规定</a></li>
-<li>[国务院国有资产监督管理委员会关于规范国有股东与上市公司进行资产重组有关事项的通知]</li>
-<li>[国家工商行政管理总局关于做好公司合并分立登记支持企业兼并重组的意见]</li>
+<li><a href="http://www.sasac.gov.cn/n1180/n1566/n258222/n259203/6509460.html">国务院国有资产监督管理委员会关于规范国有股东与上市公司进行资产重组有关事项的通知</a></li>
+<li><a href="http://www.saic.gov.cn/zwgk/zyfb/zjwj/qyzcj/201111/t20111128_121128.html">国家工商行政管理总局关于做好公司合并分立登记支持企业兼并重组的意见</a></li>
 </ol>
+<hr />
 <p><!--   --></p>
 <ol style="list-style-type: decimal">
-<li>[外国投资者对上市公司战略投资管理办法]</li>
-<li>[关于外国投资者并购境内企业的规定]</li>
-<li>[国务院办公厅关于建立外国投资者并购境内企业安全审查制度的通知]</li>
-<li>[商务部实施外国投资者并购境内企业安全审查制度的规定]</li>
+<li><a href="http://www.mofcom.gov.cn/article/swfg/swfgbl/201101/20110107349072.shtml">外国投资者对上市公司战略投资管理办法</a></li>
+<li><a href="http://www.mofcom.gov.cn/article/b/f/200907/20090706416939.shtml">关于外国投资者并购境内企业的规定</a></li>
+<li><a href="http://www.gov.cn/zwgk/2011-02/12/content_1802467.htm">国务院办公厅关于建立外国投资者并购境内企业安全审查制度的通知</a></li>
+<li><a href="http://www.mofcom.gov.cn/aarticle/b/c/201108/20110807713530.html">商务部实施外国投资者并购境内企业安全审查制度的规定</a></li>
 </ol>
 <h2 id="股权分置改革"><span class="header-section-number">3.4</span> 股权分置改革</h2>
 <ol style="list-style-type: decimal">
-<li>[上市公司股权分置改革管理办法]</li>
-<li>[上市公司股权分置改革相关会计处理暂行规定]</li>
-<li>[中国证券监督管理委员会关于进一步做好股权分置改革工作的通知]</li>
-<li>[中国证券监督管理委员会等关于上市公司股权分置改革的指导意见]</li>
-<li>[国务院国有资产监督管理委员会办公厅关于上市公司股权分置改革中国有股股权管理审核程序有关事项的通知]</li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/xxfw/fgwj/bmgz/200803/t20080305_78132.htm">上市公司股权分置改革管理办法</a></li>
+<li><a href="http://www.mof.gov.cn/zhengwuxinxi/caizhengwengao/caizhengbuwengao2005/caizhengbuwengao200511/200805/t20080525_42840.html">上市公司股权分置改革相关会计处理暂行规定</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/xxfw/fgwj/bmgz/200803/t20080305_78120.htm">中国证券监督管理委员会关于进一步做好股权分置改革工作的通知</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgqfzgg/200911/t20091110_167696.htm">中国证券监督管理委员会等关于上市公司股权分置改革的指导意见</a></li>
+<li><a href="http://www.sasac.gov.cn/n1180/n20240/n7291323/11897869.html">国务院国有资产监督管理委员会办公厅关于上市公司股权分置改革中国有股股权管理审核程序有关事项的通知</a></li>
 <li>[商务部、中国证券监督管理委员会关于上市公司股权分置改革设计外资管理有关问题的通知]</li>
-<li>[中国证券监督管理委员会关于已完成股权分置改革的上市公司原非流通股股份转让有关问题的通知]</li>
-<li>[中国证券监督管理委员会关于改革方案未获相关股东会议通过重新启动股改程序时间间隔问题的通知]</li>
-<li>[上市公司解除限售存量股份转让指导意见]</li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/xxfw/fgwj/bmgz/200803/t20080305_78192.htm">中国证券监督管理委员会关于已完成股权分置改革的上市公司原非流通股股份转让有关问题的通知</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/xxfw/fgwj/bmgz/200803/t20080305_78205.htm">中国证券监督管理委员会关于改革方案未获相关股东会议通过重新启动股改程序时间间隔问题的通知</a></li>
+<li><a href="http://finance.sina.com.cn/stock/y/20080420/21444774270.shtml">上市公司解除限售存量股份转让指导意见</a></li>
 </ol>
 <h1 id="信息披露"><span class="header-section-number">4</span> 信息披露</h1>
 <h2 id="信息披露管理"><span class="header-section-number">4.1</span> 信息披露管理</h2>
@@ -139,10 +139,10 @@
 <li><a href="./信息披露/上市公司信息披露管理办法.html">上市公司信息披露管理办法</a></li>
 <li><a href="http://www.csrc.gov.cn/pub/shenzhen/xxfw/tzzsyd/ssgs/ssgsrz/ssrzxx/200902/t20090226_95610.htm">关于前次募集资金使用情况报告的规定</a></li>
 <li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssqt/200906/t20090624_108116.htm">中国证券监督管理委员会关于上市公司聘用、更换会计事务所（审计事务所）有关问题的通知</a></li>
-<li>[中国证券监督管理委员会关于进一步提高上市公司财务信息披露质量的通知]</li>
-<li>[中国证券监督管理委员会关于做好与新会计准则相关财务会计信息披露工作的通知]</li>
-<li>[中国证券监督管理委员会关于规范上市公司信息披露及相关各方行为的通知]</li>
-<li>[中国证券监督管理委员会关于进一步提高首次公开发行股票公司财务信息披露质量有关问题的意见]</li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssxxpl/200911/t20091110_167803.htm">中国证券监督管理委员会关于进一步提高上市公司财务信息披露质量的通知</a></li>
+<li><a href="http://www.szse.cn/main/rule/bmgz/ssgsl/xxplhcwkj/39743640.shtml">中国证券监督管理委员会关于做好与新会计准则相关财务会计信息披露工作的通知</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/fujian/xxfw/nmjyfk/bmgz/201105/t20110524_195783.htm">中国证券监督管理委员会关于规范上市公司信息披露及相关各方行为的通知</a></li>
+<li><a href="./信息披露/中国证券监督管理委员会关于进一步提高首次公开发行股票公司财务信息披露质量有关问题的意见.html">中国证券监督管理委员会关于进一步提高首次公开发行股票公司财务信息披露质量有关问题的意见</a></li>
 </ol>
 <h2 id="信息披露规则"><span class="header-section-number">4.2</span> 信息披露规则</h2>
 <ol style="list-style-type: decimal">
@@ -153,26 +153,26 @@
 <h1 id="公司治理"><span class="header-section-number">5</span> 公司治理</h1>
 <h2 id="治理准则"><span class="header-section-number">5.1</span> 治理准则</h2>
 <ol style="list-style-type: decimal">
-<li>[上市公司治理准则]</li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167722.htm">上市公司治理准则</a></li>
 </ol>
 <h2 id="股东和股东大会"><span class="header-section-number">5.2</span> 股东和股东大会</h2>
 <ol style="list-style-type: decimal">
-<li>[关于加强社会公众股股东权益保护的若干规定]</li>
-<li>[上市公司与投资者关系工作指引]</li>
-<li>[上市公司股东大会规则]</li>
-<li>[国务院国有资产监督管理委员会关于规范上市公司国有股东行为的若干意见(2006.6.16)]</li>
-<li>[中国证券监督管理委员会关于进一步落实上市公司现金分红有关事项的通知(2012.5.4)]</li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167729.htm">关于加强社会公众股股东权益保护的若干规定</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167750.htm">上市公司与投资者关系工作指引</a></li>
+<li><a href="http://biz.sse.com.cn/cs/zhs/xxfw/flgz/regulations/listedco/listed20060320.html">上市公司股东大会规则</a></li>
+<li><a href="2006.6.16">国务院国有资产监督管理委员会关于规范上市公司国有股东行为的若干意见</a></li>
+<li><a href="2012.5.4">中国证券监督管理委员会关于进一步落实上市公司现金分红有关事项的通知</a></li>
 </ol>
 <h2 id="董事监事和高级管理人员"><span class="header-section-number">5.3</span> 董事、监事和高级管理人员</h2>
 <ol style="list-style-type: decimal">
-<li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/gszl/201012/t20101231_189692.htm">中国证券监督管理委员会关于<em>上市公司总经理及高层管理人员不得在控股股东单位兼职</em>的通知</a></li>
-<li>[中国证券监督管理委员会关于在上市公司建立独立董事制度的指导意见]</li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/gszl/201012/t20101231_189692.htm">中国证券监督管理委员会关于上市公司总经理及高层管理人员不得在控股股东单位兼职的通知</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/xxfw/fgwj/bmgz/200803/t20080305_77981.htm">中国证券监督管理委员会关于在上市公司建立独立董事制度的指导意见</a></li>
 <li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ybgd/200911/t20091110_167690.htm">上市公司董事、监事和高级管理人员所持本公司股份及其变动管理规则</a></li>
 </ol>
 <h2 id="股权激励"><span class="header-section-number">5.4</span> 股权激励</h2>
 <ol style="list-style-type: decimal">
-<li>[上市公司股权激励管理办法(试行)(2005.12.31)]</li>
-<li>[国有控股上市公司(境内)实施股权激励试行办法]</li>
+<li><a href="2005.12.31">上市公司股权激励管理办法(试行)</a></li>
+<li><a href="http://www.sasac.gov.cn/n1180/n1241/n2830/n13868/11948004.html">国有控股上市公司(境内)实施股权激励试行办法</a></li>
 </ol>
 <h2 id="企业内部控制"><span class="header-section-number">5.5</span> 企业内部控制</h2>
 <ol style="list-style-type: decimal">
@@ -193,7 +193,9 @@
 <ol style="list-style-type: decimal">
 <li><a href="MarkDown语法帮助.html">MarkDown语法帮助</a></li>
 </ol>
-<hr />
+<!------------------------以下为定义连接的区域----------------------> 
+
+
 <!--国家法律法规-->
 
 <!--上市发行-->
@@ -201,27 +203,28 @@
 <!--首次发行-->
 <!--上市公司再融资-->
 <!--公司债券-->
-<p>[企业债权管理条例][公司债权发行试点办法] [上市公司股东发行可交换公司债券试行规定]</p>
 <!--增持与减持-->
-<p>[上市公司回购社会公众股份管理办法（试行）][关于上市公司以集中竞价交易方式回购股份的补充规定] [中国证券监管委员会关于上市公司控股股东在股权分置改革后增持社会公众股份有关问题的通知]</p>
 <!--国有股转让-->
-<p>[减持国有股筹集社会保障资金管理暂行办法][国有单位受让上市公司股份管理暂行规定] [国有股东转让所持上市公司股份管理暂行办法][上市公司国有股东标识管理暂行规定] [境内证券市场转持部分国有股充实全国社会保障基金实施办法][财政部等关于豁免国有创业投资机构和国有创业投资引导基金国有股转持义务有关问题的通知]</p>
 <!--并购重组部分-->
-<p>[国务院国有资产监督管理委员会关于规范国有股东与上市公司进行资产重组有关事项的通知]：http://www.sasac.gov.cn/n1180/n1566/n258222/n259203/6509460.html [国家工商行政管理总局关于做好公司合并分立登记支持企业兼并重组的意见]:http://www.saic.gov.cn/zwgk/zyfb/zjwj/qyzcj/201111/t20111128_121128.html</p>
-<p>[外国投资者对上市公司战略投资管理办法][关于外国投资者并购境内企业的规定] [国务院办公厅关于建立外国投资者并购境内企业安全审查制度的通知][商务部实施外国投资者并购境内企业安全审查制度的规定]</p>
 <!--股权分置改革-->
-<p>[上市公司股权分置改革管理办法][上市公司股权分置改革相关会计处理暂行规定] [中国证券监督管理委员会关于进一步做好股权分置改革工作的通知][中国证券监督管理委员会等关于上市公司股权分置改革的指导意见] [国务院国有资产监督管理委员会办公厅关于上市公司股权分置改革中国有股股权管理审核程序有关事项的通知][商务部、中国证券监督管理委员会关于上市公司股权分置改革设计外资管理有关问题的通知] [中国证券监督管理委员会关于已完成股权分置改革的上市公司原非流通股股份转让有关问题的通知][中国证券监督管理委员会关于改革方案未获相关股东会议通过重新启动股改程序时间间隔问题的通知] [上市公司解除限售存量股份转让指导意见]</p>
+<p>[商务部、中国证券监督管理委员会关于上市公司股权分置改革设计外资管理有关问题的通知]</p>
 <!--信息披露-->
-<p>[中国证券监督管理委员会关于进一步提高上市公司财务信息披露质量的通知][中国证券监督管理委员会关于做好与新会计准则相关财务会计信息披露工作的通知] [中国证券监督管理委员会关于规范上市公司信息披露及相关各方行为的通知][中国证券监督管理委员会关于进一步提高首次公开发行股票公司财务信息披露质量有关问题的意见]</p>
 <!--信息披露规则-->
 <!--公司治理-->
-
-<p>[中国证券监督管理委员会关于在上市公司建立独立董事制度的指导意见]</p>
-<!--公司债券部分-->
+<div id="foot">
 
 
-
-<hr />
-<p>所有资源均来自于互联网，由@songliheng整理，欢迎提出建议。<br />邮箱【请自行修改符号】：songliheng$live$com</p>
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
