--- a/上市发行/首次公开发行股票并上市管理办法.html
+++ b/上市发行/首次公开发行股票并上市管理办法.html
@@ -113,5 +113,20 @@
 <h1 id="第六章附则">第六章　附　则</h1>
 <p>　　第六十九条　在中华人民共和国境内，首次公开发行股票且不上市的管理办法，由中国证监会另行规定。</p>
 <p>　　第七十条　本办法自2006年5月18日起施行。《关于股票发行工作若干规定的通知》（证监[1996]12号）、《关于做好1997年股票发行工作的通知》（证监[1997]13号）、《关于股票发行工作若干问题的补充通知》（证监[1998]8号）、《关于对拟发行上市企业改制情况进行调查的通知》（证监发字[1998]259号）、《关于对拟公开发行股票公司改制运行情况进行调查的通知》（证监发[1999]4号）、《关于拟发行股票公司聘请审计机构等问题的通知》（证监发行字[2000]131号）和《关于进一步规范股票首次发行上市有关工作的通知》（证监发行字[2003]116号）同时废止。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
