--- a/会计知识/企业会计准则第1号-存货.html
+++ b/会计知识/企业会计准则第1号-存货.html
@@ -46,5 +46,20 @@
 <p>　　第二十二条 ：企业应当在附注中披露与存货有关的下列信息：<br />　　（1）各类存货的期初和期末账面价值。<br />　　（2）确定发出存货成本所采用的方法。<br />　　（3）存货可变现净值的确定依据、存货跌价准备的计提方法、当期计提的存货跌价准备的金额、当期转回的存货跌价准备的金额以及计提和转回的有关情况。<br />　　（4）用于债务担保的存货账面价值。</p>
 <hr />
 <p>　　</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
