--- a/基本法律/中华人民共和国企业破产法.html
+++ b/基本法律/中华人民共和国企业破产法.html
@@ -201,5 +201,20 @@
 <p>　　第一百三十四条　商业银行、证券公司、保险公司等金融机构有本法第二条规定情形的，国务院金融监督管理机构可以向人民法院提出对该金融机构进行重整或者破产清算的申请。国务院金融监督管理机构依法对出现重大经营风险的金融机构采取接管、托管等措施的，可以向人民法院申请中止以该金融机构为被告或者被执行人的民事诉讼程序或者执行程序。<br />　　金融机构实施破产的，国务院可以依据本法和其他有关法律的规定制定实施办法。</p>
 <p>　　第一百三十五条　其他法律规定企业法人以外的组织的清算，属于破产清算的，参照适用本法规定的程序。</p>
 <p>　　第一百三十六条　本法自2007年6月1日起施行，《中华人民共和国企业破产法（试行）》同时废止。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
