--- a/基本法律/中华人民共和国会计法.html
+++ b/基本法律/中华人民共和国会计法.html
@@ -83,5 +83,20 @@
 <p>　　第五十条　本法下列用语的含义：<br />　　单位负责人，是指单位法定代表人或者法律、行政法规规定代表单位行使职权的主要负责人。<br />　　国家统一的会计制度，是指国务院财政部门根据本法制定的关于会计核算、会计监督、会计机构和会计人员以及会计工作管理的制度。</p>
 <p>　　第五十一条　个体工商户会计管理的具体办法，由国务院财政部门根据本法的原则另行规定。</p>
 <p>　　第五十二条　本法自2000年7月1日起施行。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
