--- a/基本法律/中华人民共和国公司法.html
+++ b/基本法律/中华人民共和国公司法.html
@@ -45,11 +45,6 @@
     - 根据1999年12月25日第九届全国人民代表大会常务委员会第十三次会议《关于修改〈中华人民共和国公司法〉的决定》 第一次修正；
     - 根据2004年8月28日第十届全国人民代表大会常务委员会第十一次会议《关于修改〈中华人民共和国公司法〉的决定》 第二次修正；
         --2005年10月27日第十届全国人民代表大会常务委员会第十八次会议修订。</code></pre>
-<blockquote>
-<p>2tejjk 1dajfk 同时天天</p>
-</blockquote>
-<p>|test |test2</p>
-<p>|测试3</p>
 <h1 id="第一章总则">第一章　总　则</h1>
 <p>　　第一条　为了<em>规范公司</em>的组织和行为，保护公司、股东和债权人的合法权益，维护社会经济秩序，促进社会主义市场经济的发展，制定本法。</p>
 <p>　　第二条　本<strong>法所称公司</strong>是指依照本法在中国境内设立的有限责任公司和股份有限公司。</p>
@@ -293,5 +288,20 @@
 <p>　　第二百一十七条　本法下列用语的含义：<br />　　（一）高级管理人员，是指公司的经理、副经理、财务负责人，上市公司董事会秘书和公司章程规定的其他人员。<br />　　（二）控股股东，是指其出资额占有限责任公司资本总额百分之五十以上或者其持有的股份占股份有限公司股本总额百分之五十以上的股东；出资额或者持有股份的比例虽然不足百分之五十，但依其出资额或者持有的股份所享有的表决权已足以对股东会、股东大会的决议产生重大影响的股东。<br />　　（三）实际控制人，是指虽不是公司的股东，但通过投资关系、协议或者其他安排，能够实际支配公司行为的人。<br />　　（四）关联关系，是指公司控股股东、实际控制人、董事、监事、高级管理人员与其直接或者间接控制的企业之间的关系，以及可能导致公司利益转移的其他关系。但是，国家控股的企业之间不仅因为同受国家控股而具有关联关系。</p>
 <p>　　第二百一十八条　外商投资的有限责任公司和股份有限公司适用本法；有关外商投资的法律另有规定的，适用其规定。</p>
 <p>　　第二百一十九条　本法自2006年1月1日起施行。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
