--- a/基本法律/中华人民共和国审计法.html
+++ b/基本法律/中华人民共和国审计法.html
@@ -84,5 +84,20 @@
 <h1 id="第七章-附-则">第七章 附 则</h1>
 <p>　　第五十三条 中国人民解放军审计工作的规定，由中央军事委员会根据本法制定。</p>
 <p>　　第五十四条 本法自1995年1月1日起施行。1988年11月30日国务院发布的《中华人民共和国审计条例》同时废止。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
