--- a/基本法律/中华人民共和国证券法.html
+++ b/基本法律/中华人民共和国证券法.html
@@ -292,5 +292,20 @@
 <p>　　第二百三十八条　境内企业直接或者间接到境外发行证券或者将其证券在境外上市交易，必须经国务院证券监督管理机构依照国务院的规定批准。</p>
 <p>　　第二百三十九条　境内公司股票以外币认购和交易的，具体办法由国务院另行规定。</p>
 <p>　　第二百四十条　本法自2006年1月1日起施行。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
