--- a/股权变动/上市公司并购重组财务顾问业务管理办法.html
+++ b/股权变动/上市公司并购重组财务顾问业务管理办法.html
@@ -76,5 +76,20 @@
 <p>　　第四十四条　中国证券业协会对财务顾问及其财务顾问主办人违反自律规范的行为，依法进行调查，给予纪律处分。</p>
 <h1 id="第五章附则">第五章　附　则</h1>
 <p>　　第四十五条　本办法自2008年8月4日起施行。</p>
+<div id="foot">
+
+
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
+</div>
 </body>
 </html>
