--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 <h1 id="国家法律法规"><span class="header-section-number">1</span> 国家法律法规</h1>
 <ol style="list-style-type: decimal">
-<li><a href="./基本法律/中华人民共和国公司法.html">中华人民共和国公司法</a></li>
+<li><a href="./基本法律/中华人民共和国公司法.html">中华人民共和国公司法</a>【2014.03.01】</li>
 <li><a href="./基本法律/中华人民共和国证券法.html">中华人民共和国证券法</a></li>
 <li><a href="./基本法律/中华人民共和国企业破产法.html">中华人民共和国企业破产法</a></li>
 <li><a href="./基本法律/中华人民共和国企业国有资产法.html">中华人民共和国企业国有资产法</a></li>
@@ -216,7 +216,7 @@
 
 <p align="left">本站说明</br>
 --------------------------------------------------------------------------------</br>
-本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+本站所有源文件都是由Pandoc's MarkDown完成，对其作者
 <a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
