--- a/股权变动/上市公司收购管理办法.html
+++ b/股权变动/上市公司收购管理办法.html
@@ -141,7 +141,7 @@
 
 <p align="left">本站说明</br>
 --------------------------------------------------------------------------------</br>
-本站所有源文件都是由Pandoc‘s MarkDown完成，对其作者
+本站所有源文件都是由Pandoc's MarkDown完成，对其作者
 <a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
