--- a/index.html
+++ b/index.html
@@ -32,22 +32,24 @@
 <li><a href="#股东和股东大会"><span class="toc-section-number">5.2</span> 股东和股东大会</a></li>
 <li><a href="#董事监事和高级管理人员"><span class="toc-section-number">5.3</span> 董事、监事和高级管理人员</a></li>
 <li><a href="#股权激励"><span class="toc-section-number">5.4</span> 股权激励</a></li>
-<li><a href="#企业内部控制"><span class="toc-section-number">5.5</span> 企业内部控制</a></li>
+<li><a href="#企业内部控制财政部出台的一系列文件"><span class="toc-section-number">5.5</span> 企业内部控制【财政部出台的一系列文件】</a></li>
 </ul></li>
-<li><a href="#尽职调查"><span class="toc-section-number">6</span> 尽职调查</a></li>
-<li><a href="#会计知识"><span class="toc-section-number">7</span> 会计知识</a></li>
-<li><a href="#语法帮助"><span class="toc-section-number">8</span> 语法帮助</a></li>
+<li><a href="#名词解释"><span class="toc-section-number">6</span> 名词解释</a></li>
+<li><a href="#尽职调查"><span class="toc-section-number">7</span> 尽职调查</a></li>
+<li><a href="#会计知识"><span class="toc-section-number">8</span> 会计知识</a></li>
+<li><a href="#语法帮助"><span class="toc-section-number">9</span> 语法帮助</a></li>
 </ul>
 </div>
 <h1 id="国家法律法规"><span class="header-section-number">1</span> 国家法律法规</h1>
 <ol style="list-style-type: decimal">
 <li><a href="./基本法律/中华人民共和国公司法.html">中华人民共和国公司法</a>【2014.03.01】</li>
-<li><a href="./基本法律/中华人民共和国证券法.html">中华人民共和国证券法</a></li>
+<li><a href="./基本法律/中华人民共和国证券法.html">中华人民共和国证券法</a>【2005】</li>
 <li><a href="./基本法律/中华人民共和国企业破产法.html">中华人民共和国企业破产法</a></li>
 <li><a href="./基本法律/中华人民共和国企业国有资产法.html">中华人民共和国企业国有资产法</a></li>
 <li><a href="./基本法律/中华人民共和国会计法.html">中华人民共和国会计法</a></li>
 <li><a href="./基本法律/中华人民共和国审计法.html">中华人民共和国审计法</a></li>
 <li><a href="./基本法律/中华人民共和国合同法.html">中华人民共和国合同法</a></li>
+<li>[中华人民共和国行政许可法]</li>
 </ol>
 <h1 id="上市发行"><span class="header-section-number">2</span> 上市发行</h1>
 <h2 id="首次发行"><span class="header-section-number">2.1</span> 首次发行</h2>
@@ -106,12 +108,16 @@
 </ol>
 <p><!-- --></p>
 <ol style="list-style-type: decimal">
-<li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/ssyts/201401/t20140122_242991.htm">关于在借壳上市审核中严格执行首次公开发行股票上市标准的通知(2014)</a></li>
-<li><a href="http://www.gov.cn/zwgk/2010-09/06/content_1696450.htm">国务院关于促进企业兼并重组的意见</a></li>
-<li><a href="http://www.csrc.gov.cn/pub/newsite/fxb/gzdt/200710/t20071030_69306.htm">中国证券监督管理委员会关于在发行审核委员会中设立上市公司并购重组审核委员会的决定</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/ssyts/201401/t20140122_242991.htm">关于在借壳上市审核中严格执行首次公开发行股票上市标准的通知</a>【2013.11.30】</li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/fxb/gzdt/200710/t20071030_69306.htm">中国证券监督管理委员会关于在发行审核委员会中设立上市公司并购重组审核委员会的决定</a>【2007年09月17日】
+<ul>
+<li><a href="http://finance.sina.com.cn/stock/y/20121015/190613373349.shtml">上市公司并购重组行政许可审核工作流程</a></li>
+<li>[并购重组共性问题审核意见关注要点]【15点】</li>
+</ul></li>
 <li><a href="http://www.csrc.gov.cn/pub/newsite/flb/flfg/bmgf/ssgs/bgcz/201012/t20101231_189631.htm">关于规范上市公司重大资产重组若干问题的规定</a></li>
 <li><a href="http://www.sasac.gov.cn/n1180/n1566/n258222/n259203/6509460.html">国务院国有资产监督管理委员会关于规范国有股东与上市公司进行资产重组有关事项的通知</a></li>
 <li><a href="http://www.saic.gov.cn/zwgk/zyfb/zjwj/qyzcj/201111/t20111128_121128.html">国家工商行政管理总局关于做好公司合并分立登记支持企业兼并重组的意见</a></li>
+<li><a href="http://www.gov.cn/zwgk/2010-09/06/content_1696450.htm">国务院关于促进企业兼并重组的意见</a></li>
 </ol>
 <hr />
 <p><!--   --></p>
@@ -157,11 +163,11 @@
 </ol>
 <h2 id="股东和股东大会"><span class="header-section-number">5.2</span> 股东和股东大会</h2>
 <ol style="list-style-type: decimal">
-<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167729.htm">关于加强社会公众股股东权益保护的若干规定</a></li>
-<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167750.htm">上市公司与投资者关系工作指引</a></li>
 <li><a href="http://biz.sse.com.cn/cs/zhs/xxfw/flgz/regulations/listedco/listed20060320.html">上市公司股东大会规则</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167750.htm">上市公司与投资者关系工作指引</a></li>
 <li><a href="2006.6.16">国务院国有资产监督管理委员会关于规范上市公司国有股东行为的若干意见</a></li>
 <li><a href="2012.5.4">中国证券监督管理委员会关于进一步落实上市公司现金分红有关事项的通知</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167729.htm">关于加强社会公众股股东权益保护的若干规定</a></li>
 </ol>
 <h2 id="董事监事和高级管理人员"><span class="header-section-number">5.3</span> 董事、监事和高级管理人员</h2>
 <ol style="list-style-type: decimal">
@@ -171,27 +177,32 @@
 </ol>
 <h2 id="股权激励"><span class="header-section-number">5.4</span> 股权激励</h2>
 <ol style="list-style-type: decimal">
-<li><a href="2005.12.31">上市公司股权激励管理办法(试行)</a></li>
+<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167765.htm">上市公司股权激励管理办法(试行)</a></li>
 <li><a href="http://www.sasac.gov.cn/n1180/n1241/n2830/n13868/11948004.html">国有控股上市公司(境内)实施股权激励试行办法</a></li>
 </ol>
-<h2 id="企业内部控制"><span class="header-section-number">5.5</span> 企业内部控制</h2>
+<h2 id="企业内部控制财政部出台的一系列文件"><span class="header-section-number">5.5</span> 企业内部控制【财政部出台的一系列文件】</h2>
 <ol style="list-style-type: decimal">
 <li><a href="http://www.mof.gov.cn/zhengwuxinxi/caizhengwengao/caizhengbuwengao2008/caizhengbuwengao20087/200810/t20081030_86252.html">企业内部控制基本规范</a></li>
 <li><a href="./公司治理/企业内部控制应用指引.pdf">企业内部控制应用指引</a></li>
 <li><a href="./公司治理/企业内部控制评价指引.pdf">企业内部控制评价指引</a></li>
 <li><a href="./公司治理/企业内部控制审计指引.pdf">企业内部控制审计指引</a></li>
 </ol>
-<h1 id="尽职调查"><span class="header-section-number">6</span> 尽职调查</h1>
+<h1 id="名词解释"><span class="header-section-number">6</span> 名词解释</h1>
 <ol style="list-style-type: decimal">
-<li><a href="保荐人尽职调查工作准则.html">保荐人尽职调查工作准则</a></li>
+<li><a href="./资本市场名词解释/名词目录.html">名词解释</a></li>
 </ol>
-<h1 id="会计知识"><span class="header-section-number">7</span> 会计知识</h1>
+<h1 id="尽职调查"><span class="header-section-number">7</span> 尽职调查</h1>
+<ol style="list-style-type: decimal">
+<li><a href="./尽职调查/保荐人尽职调查工作准则.html">保荐人尽职调查工作准则</a></li>
+</ol>
+<h1 id="会计知识"><span class="header-section-number">8</span> 会计知识</h1>
 <ol style="list-style-type: decimal">
 <li><a href="./会计知识/企业会计准则.html">企业会计准则</a></li>
 </ol>
-<h1 id="语法帮助"><span class="header-section-number">8</span> 语法帮助</h1>
+<h1 id="语法帮助"><span class="header-section-number">9</span> 语法帮助</h1>
 <ol style="list-style-type: decimal">
-<li><a href="MarkDown语法帮助.html">MarkDown语法帮助</a></li>
+<li><a href="./关于站点/MarkDown语法帮助.html">MarkDown语法帮助</a></li>
+<li><a href="./关于站点/log.html">日志文件</a></li>
 </ol>
 <!------------------------以下为定义连接的区域----------------------> 
 
@@ -221,7 +232,7 @@
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
 <a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
