--- a/基本法律/中华人民共和国公司法.html
+++ b/基本法律/中华人民共和国公司法.html
@@ -169,11 +169,11 @@
 <p>　　第一百零二条　股东大会会议由董事会召集，董事长主持；董事长不能履行职务或者不履行职务的，由副董事长主持；副董事长不能履行职务或者不履行职务的，由半数以上董事共同推举一名董事主持。<br />　　董事会不能履行或者不履行召集股东大会会议职责的，监事会应当及时召集和主持；监事会不召集和主持的，连续九十日以上单独或者合计持有公司百分之十以上股份的股东可以自行召集和主持。</p>
 <p>　　第一百零三条　召开股东大会会议，应当将<em>会议召开的时间、地点和审议的事项于会议召开二十日前通知各股东</em>；临时股东大会应当于会议召开十五日前通知各股东；发行无记名股票的，应当于会议召开三十日前公告会议召开的时间、地点和审议事项。<br />　　单独或者合计持有公司<em>百分之三以上股份的股东，可以在股东大会召开十日前提出临时提案并书面提交董事会；董事会应当在收到提案后二日内通知其他股东</em>，并将该临时提案提交股东大会审议。临时提案的内容应当属于股东大会职权范围，并有明确议题和具体决议事项。<br />　　<em>股东大会不得对前两款通知中未列明的事项作出决议</em>。<br />　　无记名股票持有人出席股东大会会议的，应当于会议召开五日前至股东大会闭会时将股票交存于公司。</p>
 <blockquote>
-<p>【居然还不能对不列明的事项作出决议！】</p>
+<p>【%居然不列明的事项还不能作出决议！%】</p>
 </blockquote>
-<p>　　第一百零四条　股东出席股东大会会议，所持每一股份有一表决权。但是，公司持有的本公司股份没有表决权。<br />　　股东大会作出决议，必须经出席会议的股东所持表决权过半数通过。但是，股东大会作出修改公司章程、增加或者减少注册资本的决议，以及公司合并、分立、解散或者变更公司形式的决议，必须经出席会议的股东所持表决权的三分之二以上通过。</p>
+<p>　　第一百零四条　<em>股东出席股东大会会议，所持每一股份有一表决权。</em>但是，公司持有的本公司股份没有表决权。<br />　　股东大会作出决议，必须经出席会议的股东所持表决权过半数通过。但是，股东大会作出修改公司章程、增加或者减少注册资本的决议，以及公司合并、分立、解散或者变更公司形式的决议，必须经出席会议的股东所持表决权的三分之二以上通过。</p>
 <blockquote>
-<p>【第四十三条，有限责任公司是可以同股不同权，但是股份有限公司么，那还是必须同股同权。】</p>
+<p>【%第四十三条，有限责任公司是可以同股不同权，但是股份有限公司么，那还是必须同股同权。%】</p>
 </blockquote>
 <p>　　第一百零五条　本法和公司章程规定公司转让、受让重大资产或者对外提供担保等事项必须经股东大会作出决议的，董事会应当及时召集股东大会会议，由股东大会就上述事项进行表决。</p>
 <p>　　第一百零六条　股东大会选举董事、监事，可以依照公司章程的规定或者股东大会的决议，实行累积投票制。<br />　　本法所称累积投票制，是指股东大会选举董事或者监事时，每一股份拥有与应选董事或者监事人数相同的表决权，股东拥有的表决权可以集中使用。</p>
@@ -303,7 +303,10 @@
 <p>　　第二百一十五条　公司违反本法规定，应当承担民事赔偿责任和缴纳罚款、罚金的，其财产不足以支付时，先承担民事赔偿责任。</p>
 <p>　　第二百一十六条　违反本法规定，构成犯罪的，依法追究刑事责任。</p>
 <h1 id="第十三章附则">第十三章　附　则</h1>
-<p>　　第二百一十七条　本法下列用语的含义：<br />　　（一）高级管理人员，是指公司的经理、副经理、财务负责人，上市公司董事会秘书和公司章程规定的其他人员。<br />　　（二）控股股东，是指其出资额占有限责任公司资本总额百分之五十以上或者其持有的股份占股份有限公司股本总额百分之五十以上的股东；出资额或者持有股份的比例虽然不足百分之五十，但依其出资额或者持有的股份所享有的表决权已足以对股东会、股东大会的决议产生重大影响的股东。<br />　　（三）实际控制人，是指虽不是公司的股东，但通过投资关系、协议或者其他安排，能够实际支配公司行为的人。<br />　　（四）关联关系，是指公司控股股东、实际控制人、董事、监事、高级管理人员与其直接或者间接控制的企业之间的关系，以及可能导致公司利益转移的其他关系。但是，国家控股的企业之间不仅因为同受国家控股而具有关联关系。</p>
+<p>　　第二百一十七条　本法下列用语的含义：<br />　　（一）<em>高级管理人员，是指公司的经理、副经理、财务负责人，上市公司董事会秘书</em>和公司章程规定的其他人员。<br />　　（二）控股股东，是指其出资额占有限责任公司资本总额百分之五十以上或者其持有的股份占股份有限公司股本总额百分之五十以上的股东；出资额或者持有股份的比例虽然不足百分之五十，但依其出资额或者持有的股份所享有的表决权已足以对股东会、股东大会的决议产生重大影响的股东。<br />　　（三）实际控制人，是指虽不是公司的股东，但通过投资关系、协议或者其他安排，能够实际支配公司行为的人。<br />　　（四）关联关系，是指公司控股股东、实际控制人、董事、监事、高级管理人员与其直接或者间接控制的企业之间的关系，以及可能导致公司利益转移的其他关系。但是，国家控股的企业之间不仅因为同受国家控股而具有关联关系。</p>
+<blockquote>
+<p>【%董秘属于企业高级管理人员%】</p>
+</blockquote>
 <p>　　第二百一十八条　外商投资的有限责任公司和股份有限公司适用本法；有关外商投资的法律另有规定的，适用其规定。</p>
 <p>　　第二百一十九条　本法自2006年1月1日起施行。</p>
 <hr />
@@ -320,7 +323,7 @@
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
 <a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
