--- a/股权变动/上市公司收购管理办法.html
+++ b/股权变动/上市公司收购管理办法.html
@@ -14,7 +14,7 @@
 <li><a href="#ch01">第一章　总则</a></li>
 <li><a href="#ch02">第二章　权益披露</a></li>
 <li><a href="#ch03">第三章　要约收购</a></li>
-<li><a href="#ch04">第四章 协议收购</a></li>
+<li><a href="#ch04">第四章　　协议收购</a></li>
 <li><a href="#ch05">第五章　间接收购</a></li>
 <li><a href="#ch06">第六章　豁免申请</a></li>
 <li><a href="#ch07">第七章　财务顾问</a></li>
@@ -43,11 +43,14 @@
 <p>　　第十一条　证券交易所依法制定业务规则，为上市公司的收购及相关股份权益变动活动组织交易和提供服务，对相关证券交易活动进行实时监控，监督上市公司的收购及相关股份权益变动活动的信息披露义务人切实履行信息披露义务。<br />　　证券登记结算机构依法制定业务规则，为上市公司的收购及相关股份权益变动活动所涉及的证券登记、存管、结算等事宜提供服务。</p>
 <h1 id="ch02">第二章　权益披露</h1>
 <p>　　第十二条　投资者在一个上市公司中拥有的权益，包括登记在其名下的股份和虽未登记在其名下但该投资者可以实际支配表决权的股份。投资者及其一致行动人在一个上市公司中拥有的权益应当合并计算。</p>
-<p>　　第十三条　通过证券交易所的证券交易，投资者及其一致行动人拥有权益的股份达到一个上市公司已发行股份的5%时，应当在该事实发生之日起3日内编制权益变动报告书，向中国证监会、证券交易所提交书面报告，抄报该上市公司所在地的中国证监会派出机构(以下简称派出机构)，通知该上市公司，并予公告；在上述期限内，不得再行买卖该上市公司的股票。<br />　　前述投资者及其一致行动人拥有权益的股份达到一个上市公司已发行股份的5%后，通过证券交易所的证券交易，其拥有权益的股份占该上市公司已发行股份的比例每增加或者减少5%，应当依照前款规定进行报告和公告。在报告期限内和作出报告、公告后2日内，不得再行买卖该上市公司的股票。</p>
+<p>　　第十三条　通过证券交易所的证券交易，投资者及其一致行动人拥有权益的股份达到一个上市公司已发行股份的5%时，应当在该事实发生之日起3日内编制权益变动报告书，向中国证监会、证券交易所提交书面报告，抄报该上市公司所在地的中国证监会派出机构(以下简称派出机构)，通知该上市公司，并予公告；在上述期限内，不得再行买卖该上市公司的股票。<br />　　前述投资者及其一致行动人拥有权益的股份达到一个上市公司已发行股份的5%后，通过证券交易所的证券交易，其拥有权益的股份占该上市公司已发行股份的比例<em>每增加或者减少5%，应当依照前款规定进行报告和公告。在报告期限内和作出报告、公告后2日内，不得再行买卖该上市公司的股票</em>。</p>
+<blockquote>
+<p>【%《证券法》第86条规定，投资者持有或者通过协议、其他安排与他人共同持有一个上市公司已发行的股份达到5%后，其所持该上市公司已发行的股份比例每增加或者减少5%，应当依照规定进行报告和公告。在报告期限内和作出报告、公告后2日内，不得再行买卖该上市公司的股票。 对于创办板上市公司，根据《创业板股票上市规则》的规定，持股5%以上股东通过证券交易系统买卖上市公司股份，每增加或减少比例达到公司股份总数的1%时，相关股东应当委托上市公司发布公告。《中小企业板上市公司规范运作指引》对中小板上市公司的控股股东也提出了类似的披露要求。%】</p>
+</blockquote>
 <p>　　第十四条　通过协议转让方式，投资者及其一致行动人在一个上市公司中拥有权益的股份拟达到或者超过一个上市公司已发行股份的5%时，应当在该事实发生之日起3日内编制权益变动报告书，向中国证监会、证券交易所提交书面报告，抄报派出机构，通知该上市公司，并予公告。<br />　　投资者及其一致行动人拥有权益的股份达到一个上市公司已发行股份的5%后，其拥有权益的股份占该上市公司已发行股份的比例每增加或者减少达到或者超过5%的，应当依照前款规定履行报告、公告义务。<br />　　前两款规定的投资者及其一致行动人在作出报告、公告前，不得再行买卖该上市公司的股票。相关股份转让及过户登记手续按照本办法<a href="#ch04">第四章</a>及证券交易所、证券登记结算机构的规定办理。</p>
 <p>　　第十五条　投资者及其一致行动人通过行政划转或者变更、执行法院裁定、继承、赠与等方式拥有权益的股份变动达到前条规定比例的，应当按照前条规定履行报告、公告义务，并参照前条规定办理股份过户登记手续。</p>
-<p>　　第十六条　投资者及其一致行动人不是上市公司的第一大股东或者实际控制人，其拥有权益的股份达到或者超过该公司已发行股份的5%，但未达到20%的，应当编制包括下列内容的简式权益变动报告书：<br />　　(一)投资者及其一致行动人的姓名、住所；投资者及其一致行动人为法人的，其名称、注册地及法定代表人；<br />　　(二)持股目的，是否有意在未来12个月内继续增加其在上市公司中拥有的权益；<br />　　(三)上市公司的名称、股票的种类、数量、比例；<br />　　(四)在上市公司中拥有权益的股份达到或者超过上市公司已发行股份的5%或者拥有权益的股份增减变化达到5%的时间及方式；<br />　　(五)权益变动事实发生之日前6个月内通过证券交易所的证券交易买卖该公司股票的简要情况；<br />　　(六)中国证监会、证券交易所要求披露的其他内容。<br />　　前述投资者及其一致行动人为上市公司第一大股东或者实际控制人，其拥有权益的股份达到或者超过一个上市公司已发行股份的5%，但未达到20%的，还应当披露本办法第十七条第一款规定的内容。</p>
-<p>　　第十七条　投资者及其一致行动人拥有权益的股份达到或者超过一个上市公司已发行股份的20%但未超过30%的，应当编制详式权益变动报告书，除须披露前条规定的信息外，还应当披露以下内容：　　<br />　　(一)投资者及其一致行动人的控股股东、实际控制人及其股权控制关系结构图；<br />　　(二)取得相关股份的价格、所需资金额、资金来源，或者其他支付安排；<br />　　(三)投资者、一致行动人及其控股股东、实际控制人所从事的业务与上市公司的业务是否存在同业竞争或者潜在的同业竞争，是否存在持续关联交易；存在同业竞争或者持续关联交易的，是否已做出相应的安排，确保投资者、一致行动人及其关联方与上市公司之间避免同业竞争以及保持上市公司的独立性；<br />　　(四)未来12个月内对上市公司资产、业务、人员、组织结构、公司章程等进行调整的后续计划；<br />　　(五)前24个月内投资者及其一致行动人与上市公司之间的重大交易；<br />　　(六)不存在本办法第六条规定的情形；<br />　　(七)能够按照本办法第五十条的规定提供相关文件。<br />　　前述投资者及其一致行动人为上市公司第一大股东或者实际控制人的，还应当聘请财务顾问对上述权益变动报告书所披露的内容出具核查意见，但国有股行政划转或者变更、股份转让在同一实际控制人控制的不同主体之间进行、因继承取得股份的除外。投资者及其一致行动人承诺至少3年放弃行使相关股份表决权的，可免于聘请财务顾问和提供前款第(七)项规定的文件。</p>
+<p>　　第十六条　投资者及其一致行动人不是上市公司的第一大股东或者实际控制人，其拥有权益的股份达到或者超过该公司已发行股份的<em>5%，但未达到20%的，</em>应当编制包括下列内容的<em>简式权益变动报告书</em>：<br />　　(一)投资者及其一致行动人的姓名、住所；投资者及其一致行动人为法人的，其名称、注册地及法定代表人；<br />　　(二)持股目的，是否有意在未来12个月内继续增加其在上市公司中拥有的权益；<br />　　(三)上市公司的名称、股票的种类、数量、比例；<br />　　(四)在上市公司中拥有权益的股份达到或者超过上市公司已发行股份的5%或者拥有权益的股份增减变化达到5%的时间及方式；<br />　　(五)权益变动事实发生之日前6个月内通过证券交易所的证券交易买卖该公司股票的简要情况；<br />　　(六)中国证监会、证券交易所要求披露的其他内容。<br />　　前述投资者及其一致行动人为上市公司第一大股东或者实际控制人，其拥有权益的股份达到或者超过一个上市公司已发行股份的5%，但未达到20%的，还应当披露本办法第十七条第一款规定的内容。</p>
+<p>　　第十七条　投资者及其一致行动人拥有权益的股份达到或者超过一个上市公司已发行股份的<em>20%但未超过30%的</em>，应当编制<em>详式权益变动报告书</em>，除须披露前条规定的信息外，还应当披露以下内容：　　<br />　　(一)投资者及其一致行动人的控股股东、实际控制人及其股权控制关系结构图；<br />　　(二)取得相关股份的价格、所需资金额、资金来源，或者其他支付安排；<br />　　(三)投资者、一致行动人及其控股股东、实际控制人所从事的业务与上市公司的业务是否存在同业竞争或者潜在的同业竞争，是否存在持续关联交易；存在同业竞争或者持续关联交易的，是否已做出相应的安排，确保投资者、一致行动人及其关联方与上市公司之间避免同业竞争以及保持上市公司的独立性；<br />　　(四)未来12个月内对上市公司资产、业务、人员、组织结构、公司章程等进行调整的后续计划；<br />　　(五)前24个月内投资者及其一致行动人与上市公司之间的重大交易；<br />　　(六)不存在本办法第六条规定的情形；<br />　　(七)能够按照本办法第五十条的规定提供相关文件。<br />　　前述投资者及其一致行动人为上市公司第一大股东或者实际控制人的，还应当聘请财务顾问对上述权益变动报告书所披露的内容出具核查意见，但国有股行政划转或者变更、股份转让在同一实际控制人控制的不同主体之间进行、因继承取得股份的除外。投资者及其一致行动人承诺至少3年放弃行使相关股份表决权的，可免于聘请财务顾问和提供前款第(七)项规定的文件。</p>
 <p>　　第十八条　已披露权益变动报告书的投资者及其一致行动人在披露之日起6个月内，因拥有权益的股份变动需要再次报告、公告权益变动报告书的，可以仅就与前次报告书不同的部分作出报告、公告；自前次披露之日起超过6个月的，投资者及其一致行动人应当按照本章的规定编制权益变动报告书，履行报告、公告义务。</p>
 <p>　　第十九条　因上市公司减少股本导致投资者及其一致行动人拥有权益的股份变动出现本办法第十四条规定情形的，投资者及其一致行动人免于履行报告和公告义务。上市公司应当自完成减少股本的变更登记之日起2个工作日内，就因此导致的公司股东拥有权益的股份变动情况作出公告；因公司减少股本可能导致投资者及其一致行动人成为公司第一大股东或者实际控制人的，该投资者及其一致行动人应当自公司董事会公告有关减少公司股本决议之日起3个工作日内，按照本办法第十七条第一款的规定履行报告、公告义务。</p>
 <p>　　第二十条　上市公司的收购及相关股份权益变动活动中的信息披露义务人依法披露前，相关信息已在媒体上传播或者公司股票交易出现异常的，上市公司应当立即向当事人进行查询，当事人应当及时予以书面答复，上市公司应当及时作出公告。　　</p>
@@ -78,7 +81,7 @@
 <p>　　第四十四条　收购期限届满，被收购公司股权分布不符合上市条件，该上市公司的股票由证券交易所依法终止上市交易。在收购行为完成前，其余仍持有被收购公司股票的股东，有权在收购报告书规定的合理期限内向收购人以收购要约的同等条件出售其股票，收购人应当收购。</p>
 <p>　　第四十五条　收购期限届满后15日内，收购人应当向中国证监会报送关于收购情况的书面报告，同时抄报派出机构，抄送证券交易所，通知被收购公司。</p>
 <p>　　第四十六条　除要约方式外，投资者不得在证券交易所外公开求购上市公司的股份。</p>
-<h1 id="ch04">第四章 协议收购</h1>
+<h1 id="ch04">第四章　　协议收购</h1>
 <p>　　第四十七条　收购人通过协议方式在一个上市公司中拥有权益的股份达到或者超过该公司已发行股份的5%，但未超过30%的，按照本办法<a href="#ch02">第二章</a>的规定办理。<br />　　收购人拥有权益的股份达到该公司已发行股份的30%时，继续进行收购的，应当依法向该上市公司的股东发出全面要约或者部分要约。符合本办法<a href="#ch06">第六章</a>规定情形的，收购人可以向中国证监会申请免除发出要约。<br />　　收购人拟通过协议方式收购一个上市公司的股份超过30%的，超过30%的部分，应当改以要约方式进行；但符合本办法<a href="#ch06">第六章</a>规定情形的，收购人可以向中国证监会申请免除发出要约。收购人在取得中国证监会豁免后，履行其收购协议；未取得中国证监会豁免且拟继续履行其收购协议的，或者不申请豁免的，在履行其收购协议前，应当发出全面要约。</p>
 <p>　　第四十八条　以协议方式收购上市公司股份超过30%，收购人拟依据本办法<a href="#ch06">第六章</a>的规定申请豁免的，应当在与上市公司股东达成收购协议之日起3日内编制上市公司收购报告书，提交豁免申请及本办法第五十条规定的相关文件，委托财务顾问向中国证监会、证券交易所提交书面报告，同时抄报派出机构，通知被收购公司，并公告上市公司收购报告书摘要。派出机构收到书面报告后通报上市公司所在地省级人民政府。<br />　　收购人自取得中国证监会的豁免之日起3日内公告其收购报告书、财务顾问专业意见和律师出具的法律意见书；收购人未取得豁免的，应当自收到中国证监会的决定之日起3日内予以公告，并按照本办法第六十一条第二款的规定办理。<br />　　中国证监会发现收购报告书不符合法律、行政法规及相关规定的，应当及时告知收购人，收购人未纠正的，不得公告收购报告书，在公告前不得履行收购协议。</p>
 <p>　　第四十九条　依据前条规定所作的上市公司收购报告书，须披露本办法第二十九条第(一)项至第(六)项和第(九)项至第(十四)项规定的内容及收购协议的生效条件和付款安排。<br />　　已披露收购报告书的收购人在披露之日起6个月内，因权益变动需要再次报告、公告的，可以仅就与前次报告书不同的部分作出报告、公告；超过6个月的，应当按照本办法<a href="#ch02">第二章</a>的规定履行报告、公告义务。</p>
@@ -123,7 +126,7 @@
 <p>　　第八十二条　中国证监会将上市公司的收购及相关股份权益变动活动中的当事人的违法行为和整改情况记入诚信档案。<br />　　违反本办法的规定构成证券违法行为的，依法追究法律责任。</p>
 <h1 id="ch10">第十章　附则</h1>
 <p>　　第八十三条　本办法所称一致行动，是指投资者通过协议、其他安排，与其他投资者共同扩大其所能够支配的一个上市公司股份表决权数量的行为或者事实。<br />　　在上市公司的收购及相关股份权益变动活动中有一致行动情形的投资者，互为一致行动人。如无相反证据，投资者有下列情形之一的，为一致行动人：<br />　　<em>(一)投资者之间有股权控制关系；<br />　　(二)投资者受同一主体控制；　　<br />　　(三)投资者的董事、监事或者高级管理人员中的主要成员，同时在另一个投资者担任董事、监事或者高级管理人员；<br />　　(四)投资者参股另一投资者，可以对参股公司的重大决策产生重大影响；<br />　　(五)银行以外的其他法人、其他组织和自然人为投资者取得相关股份提供融资安排；<br />　　(六)投资者之间存在合伙、合作、联营等其他经济利益关系；<br />　　(七)持有投资者30%以上股份的自然人，与投资者持有同一上市公司股份；<br />　　(八)在投资者任职的董事、监事及高级管理人员，与投资者持有同一上市公司股份；<br />　　(九)持有投资者30%以上股份的自然人和在投资者任职的董事、监事及高级管理人员，其父母、配偶、子女及其配偶、配偶的父母、兄弟姐妹及其配偶、配偶的兄弟姐妹及其配偶等亲属，与投资者持有同一上市公司股份；<br />　　(十)在上市公司任职的董事、监事、高级管理人员及其前项所述亲属同时持有本公司股份的，或者与其自己或者其前项所述亲属直接或者间接控制的企业同时持有本公司股份；<br />　　(十一)上市公司董事、监事、高级管理人员和员工与其所控制或者委托的法人或者其他组织持有本公司股份；</em><br />　　(十二)投资者之间具有其他关联关系。<br />　　一致行动人应当合并计算其所持有的股份。投资者计算其所持有的股份，应当包括登记在其名下的股份，也包括登记在其一致行动人名下的股份。<br />　　投资者认为其与他人不应被视为一致行动人的，可以向中国证监会提供相反证据。</p>
-<p>　　第八十四条　有下列情形之一的，为拥有上市公司控制权：<br />　　(一)投资者为上市公司持股50%以上的控股股东；<br />　　(二)投资者可以实际支配上市公司股份表决权超过30%；<br />　　(三)投资者通过实际支配上市公司股份表决权能够决定公司董事会半数以上成员选任；<br />　　(四)投资者依其可实际支配的上市公司股份表决权足以对公司股东大会的决议产生重大影响；<br />　　(五)中国证监会认定的其他情形。</p>
+<p>　　第八十四条　<em>有下列情形之一的，为拥有上市公司控制权：<br />　　(一)投资者为上市公司持股50%以上的控股股东；<br />　　(二)投资者可以实际支配上市公司股份表决权超过30%；<br />　　(三)投资者通过实际支配上市公司股份表决权能够决定公司董事会半数以上成员选任；<br />　　(四)投资者依其可实际支配的上市公司股份表决权足以对公司股东大会的决议产生重大影响；<br />　　(五)中国证监会认定的其他情形</em>。</p>
 <p>　　第八十五条　信息披露义务人涉及计算其持股比例的，应当将其所持有的上市公司已发行的可转换为公司股票的证券中有权转换部分与其所持有的同一上市公司的股份合并计算，并将其持股比例与合并计算非股权类证券转为股份后的比例相比，以二者中的较高者为准；行权期限届满未行权的，或者行权条件不再具备的，无需合并计算。<br />　　前款所述二者中的较高者，应当按下列公式计算：<br />　　(一)投资者持有的股份数量／上市公司已发行股份总数<br />　　(二)(投资者持有的股份数量＋投资者持有的可转换为公司股票的非股权类证券所对应的股份数量)／(上市公司已发行股份总数＋上市公司发行的可转换为公司股票的非股权类证券所对应的股份总数)</p>
 <p>　　第八十六条　投资者因行政划转、执行法院裁决、继承、赠与等方式取得上市公司控制权的，应当按照本办法<a href="#ch04">第四章</a>的规定履行报告、公告义务。</p>
 <p>　　第八十七条　权益变动报告书、收购报告书、要约收购报告书、被收购公司董事会报告书、要约收购豁免申请文件等文件的内容与格式，由中国证监会另行制定。</p>
@@ -146,7 +149,7 @@
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
 <a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
