--- a/会计知识/企业会计准则.html
+++ b/会计知识/企业会计准则.html
@@ -55,7 +55,8 @@
 <li><a href="./企业会计准则/企业会计准则第35号-分部报告.pdf">企业会计准则第35号-分部报告</a></li>
 <li><a href="./企业会计准则/企业会计准则第36号-关联方披露.pdf">企业会计准则第36号-关联方披露</a></li>
 <li><a href="./企业会计准则/企业会计准则第37号-金融工具列报.pdf">企业会计准则第37号-金融工具列报</a></li>
-<li><a href="./企业会计准则/企业会计准则第38号-首次执行企业会计准则.pdf">企业会计准则第38号-首次执行企业会计准则</a></li>
+<li><a href="./企业会计准则/企业会计准则第38号-首次执行企业会计准则.pdf">企业会计准则第38号-首次执行企业会计准则</a><br /></li>
+<li><a href="./企业会计准则/企业会计准则第39号-公允价值计量.pdf">企业会计准则第39号-公允价值计量</a>【2014】</li>
 </ol>
 <div id="foot">
 
@@ -67,7 +68,7 @@
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
 <a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
