--- a/信息披露/上市公司信息披露管理办法.html
+++ b/信息披露/上市公司信息披露管理办法.html
@@ -112,10 +112,18 @@
 <p>　　第七十二条 本办法自公布之日起施行。《公开发行股票公司信息披露实施细则》（试行）（证监上字[1993]43号）、《关于股票公开发行与上市公司信息披露有关事项的通知》（证监研字[1993]19号）、《关于加强对上市公司临时报告审查的通知》（证监上字[1996]26号）、《关于上市公司发布澄清公告若干问题的通知》（证监上字[1996]28号）、《上市公司披露信息电子存档事宜的通知》（证监信字[1998]50号）、《关于进一步加强ST、PT公司信息披露监管工作的通知》（证监公司字[2000]63号）、《关于拟发行新股的上市公司中期报告有关问题的通知》（证监公司字[2001]69号）、《关于上市公司临时公告及相关附件报送中国证监会派出机构备案的通知》（证监公司字[2003]7号）同时废止。</p>
 <div id="foot">
 
-本站所有内容全部来自于互联网，并经过@songliheng的精心收集、整理汇编而成</br></br>
 
-欢迎提出建议，交流邮箱songliheng_live_com
-
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc's MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
 </div>
 </body>
 </html>
