--- a/信息披露/公开发行证券的公司信息披露内容与格式准则.html
+++ b/信息披露/公开发行证券的公司信息披露内容与格式准则.html
@@ -11,52 +11,64 @@
 <body>
 <div id="TOC">
 <ul>
-<li><a href="#上市公司信息披露内容与格式准则">上市公司信息披露内容与格式准则</a></li>
+<li><a href="#公开发行证券的公司信息披露内容与格式准则">公开发行证券的公司信息披露内容与格式准则</a></li>
 </ul>
 </div>
-<h1 id="上市公司信息披露内容与格式准则">上市公司信息披露内容与格式准则</h1>
+<h1 id="公开发行证券的公司信息披露内容与格式准则">公开发行证券的公司信息披露内容与格式准则</h1>
 <p>文件太多了，这里只是个索引，可以在<a href="http://www.szse.cn/main/rule/bmgz/xxplgz/nrygszz_front/">深圳证券交易所</a>网站找到相应的文件。</p>
 <ol style="list-style-type: decimal">
-<li>上市公司信息披露内容与格式准则第1号-招股说明书（2006年修订）</li>
-<li>上市公司信息披露内容与格式准则第2号-年度报告的内容与格式（2012年修订）</li>
-<li>上市公司信息披露内容与格式准则第3号-半年度报告的内容与格式(2007年修订)</li>
-<li>上市公司信息披露内容与格式准则第5号-公司股份变动报告的内容与格式(2007年修订)</li>
-<li>上市公司信息披露内容与格式准则第9号-首次公开发行股票并上市申请文件(2006年修订)</li>
-<li>上市公司信息披露内容与格式准则第10号-上市公司公开发行证券申请文件(2006)</li>
-<li>上市公司信息披露内容与格式准则第11号-上市公司公开发行证券募集说明书(2006)</li>
-<li>上市公司信息披露内容与格式准则第15号-权益变动报告书(2006)</li>
-<li>上市公司信息披露内容与格式准则第16号-上市公司收购报告书(2006)</li>
-<li>上市公司信息披露内容与格式准则第17号-要约收购报告书(2006)</li>
-<li>上市公司信息披露内容与格式准则第18号-被收购公司董事会报告书(2006)</li>
-<li>上市公司信息披露内容与格式准则第19号-豁免要约收购申请文件(2007)</li>
-<li>上市公司信息披露内容与格式准则第23号-公开发行公司债券募集说明书(2007)</li>
-<li>上市公司信息披露内容与格式准则第24号-公开发行公司债券申请文件(2007)</li>
-<li>上市公司信息披露内容与格式准则第25号-上市公司非公开发行股票预案和发行情况报告书(2007)</li>
-<li>上市公司信息披露内容与格式准则第26号-上市公司重大资产重组申请文件(2007)</li>
-<li>上市公司信息披露内容与格式准则第28号-创业板公司招股说明书(2009)</li>
-<li>上市公司信息披露内容与格式准则第29号-首次公开发行股票并在创业板上市申请文件(2009)</li>
-<li>上市公司信息披露内容与格式准则第30号-创业板上市公司年度报告的内容与格式(2009)</li>
-<li>上市公司信息披露内容与格式准则第31号-创业板上市公司半年度报告的内容与格式(2010)</li>
-<li>上市公司信息披露内容与格式准则第32号-发行优先股申请文件(2014)</li>
-<li>上市公司信息披露内容与格式准则第33号-发行优先股预案和发行情况报告书(2014)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第1号-招股说明书（2006年修订）</li>
+<li>公开发行证券的公司信息披露内容与格式准则第2号-年度报告的内容与格式（2012年修订）</li>
+<li>公开发行证券的公司信息披露内容与格式准则第3号-半年度报告的内容与格式(2007年修订)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第5号-公司股份变动报告的内容与格式(2007年修订)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第9号-首次公开发行股票并上市申请文件(2006年修订)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第10号-公开发行证券的公司公开发行证券申请文件(2006)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第11号-公开发行证券的公司公开发行证券募集说明书(2006)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第15号-权益变动报告书(2006)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第16号-公开发行证券的公司收购报告书(2006)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第17号-要约收购报告书(2006)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第18号-被收购公司董事会报告书(2006)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第19号-豁免要约收购申请文件(2007)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第23号-公开发行公司债券募集说明书(2007)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第24号-公开发行公司债券申请文件(2007)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第25号-公开发行证券的公司非公开发行股票预案和发行情况报告书(2007)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第26号-公开发行证券的公司重大资产重组申请文件(2007)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第28号-创业板公司招股说明书(2009)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第29号-首次公开发行股票并在创业板上市申请文件(2009)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第30号-创业板公开发行证券的公司年度报告的内容与格式(2009)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第31号-创业板公开发行证券的公司半年度报告的内容与格式(2010)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第32号-发行优先股申请文件(2014)</li>
+<li>公开发行证券的公司信息披露内容与格式准则第33号-发行优先股预案和发行情况报告书(2014)</li>
 </ol>
-<p><del>1. 上市公司信息披露内容与格式准则第4号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第6号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第7号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第8号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第12号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第13号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第14号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第20号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第21号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第22号-</del></p>
-<p><del>1. 上市公司信息披露内容与格式准则第27号-</del></p>
+<hr />
+<ol style="list-style-type: decimal">
+<li><a href="./公开发行证券的公司信息披露内容与格式准则第17号-要约收购报告书.html">公开发行证券的公司信息披露内容与格式准则第17号-要约收购报告书</a>【2006】</li>
+</ol>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第4号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第6号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第7号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第8号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第12号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第13号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第14号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第20号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第21号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第22号-</del></p>
+<p><del>1. 公开发行证券的公司信息披露内容与格式准则第27号-</del></p>
 <div id="foot">
 
-本站所有内容全部来自于互联网，并经过@songliheng的精心收集、整理汇编而成</br></br>
 
-欢迎提出建议，交流邮箱songliheng_live_com
-
+<p align="left">本站说明</br>
+--------------------------------------------------------------------------------</br>
+本站所有源文件都是由Pandoc's MarkDown完成，对其作者
+<a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+本站的静态page页面托管在
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
+我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
+我的邮箱: songliheng_live_com
+</p>
 </div>
 </body>
 </html>
