--- a/基本法律/中华人民共和国证券法.html
+++ b/基本法律/中华人民共和国证券法.html
@@ -31,10 +31,9 @@
 </ul>
 </div>
 <p><bt>中华人民共和国证券法</bt>　</p>
-<pre><code>    - 1998年12月29日第九届全国人民代表大会常务委员会第六次会议通过。
-
-    - 根据2004年8月28日第十届全国人民代表大会常务委员会第十一次会议《关于修改〈中华人民共和国证券法〉的决定》修正；
-        --2005年10月27日第十届全国人民代表大会常务委员会第十八次会议修订。</code></pre>
+<pre><code>- 1998年12月29日第九届全国人民代表大会常务委员会第六次会议通过。
+- 根据2004年8月28日第十届全国人民代表大会常务委员会第十一次会议《关于修改〈中华人民共和国证券法〉的决定》修正；
+--2005年10月27日第十届全国人民代表大会常务委员会第十八次会议修订。</code></pre>
 <p>H<sub>2</sub>O</p>
 <h1 id="第一章总则">第一章　总　则</h1>
 <p>　　第一条　为了规范证券发行和交易行为，保护投资者的合法权益，维护社会经济秩序和社会公共利益，促进社会主义市场经济的发展，制定本法。</p>
@@ -302,7 +301,7 @@
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
 <a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过@songliheng精心收集、整理汇编而成，欢迎指正。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
