--- a/上市发行/上市公司证券发行管理办法.html
+++ b/上市发行/上市公司证券发行管理办法.html
@@ -138,7 +138,7 @@
 <a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
 本站的静态page页面托管在
 <a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/blog/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
