--- a/resume.html
+++ b/resume.html
@@ -39,13 +39,15 @@
 </ul>
 <h2 id="过往业绩">过往业绩</h2>
 <ul>
-<li>湖北某石化类项目尽职调查</li>
+<li>湖北某石化设备制造企业股权类投资</li>
 <li>某项目公司成立的前期各项筹备工作</li>
 </ul>
 <h2 id="个人特点">个人特点</h2>
 <ul>
 <li><p>广泛的兴趣爱好，尤其在IT及互联网方面<br /> 设计过3D工厂，开发过嵌入式，敲过C#代码，修改过Linux服务器脚本</p></li>
 <li><p>个性阳光，容易交流<br /> 多年后，同学们都不会忘记这个阳光的胖子</p></li>
+<li><p>宅得住<br /> 不服不行，哥可以为解决一个问题连续半个月每天只小睡5个小时</p></li>
+<li><p>良好的逻辑思维能力和风控意识<br /> 呵呵，某个前辈的评价，就不自夸了</p></li>
 </ul>
 </body>
 </html>
