--- a/资本市场名词解释/名词目录.html
+++ b/资本市场名词解释/名词目录.html
@@ -11,23 +11,17 @@
 <body>
 <div id="TOC">
 <ul>
-<li><a href="#公开发行证券的公司信息披露解释性公告规范回答">公开发行证券的公司信息披露解释性公告/规范回答</a></li>
+<li><a href="#名词目录">名词目录</a></li>
 </ul>
 </div>
-<h1 id="公开发行证券的公司信息披露解释性公告规范回答">公开发行证券的公司信息披露解释性公告/规范回答</h1>
-<p>这里只是个索引，可以在<a href="http://www.szse.cn/main/rule/bmgz/xxplgz/gfwd_front/">深圳证券交易所</a>网站找到相应的文件。</p>
+<h1 id="名词目录">名词目录</h1>
 <ol style="list-style-type: decimal">
-<li>公开发行证券的公司信息披露解释性公告第1号——非经常性损益</li>
-<li>公开发行证券的公司信息披露解释性公告第2号——财务报表附注中政府补助相关信息的披露</li>
-<li>公开发行证券的公司信息披露解释性公告第3号——财务报表附注中可供出售金融资产减值的披露</li>
-<li>公开发行证券的公司信息披露解释性公告第4号——财务报表附注中分步实现企业合并相关信息的披露</li>
-<li>公开发行证券的公司信息披露解释性公告第5号——财务报表附注中分步处置对子公司投资至丧失控制权相关信息的披露</li>
-</ol>
-<p><!-- --></p>
-<ol style="list-style-type: decimal">
-<li>公开发行证券的公司信息披露规范问答第3号——弥补累计亏损的来源、程序及信息披露</li>
-<li>公开发行证券的公司信息披露规范问答第6号——支付会计师事务所报酬及其披露</li>
-<li>公开发行证券的公司信息披露规范问答第7号――新旧会计准则过渡期间比较财务会计信息的编制和披露</li>
+<li><a href="./一致行动人.html">一致行动人</a></li>
+<li><a href="./借壳上市.html">借壳上市</a></li>
+<li><a href="./内幕交易.html">内幕交易</a></li>
+<li><a href="./同业竞争.html">同业竞争</a></li>
+<li><a href="./董秘考试.html">董秘考试</a></li>
+<li><a href="./关联交易.html">关联交易</a></li>
 </ol>
 <div id="foot">
 
