--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
 <li><a href="#股权激励"><span class="toc-section-number">5.4</span> 股权激励</a></li>
 <li><a href="#企业内部控制财政部出台的一系列文件"><span class="toc-section-number">5.5</span> 企业内部控制【财政部出台的一系列文件】</a></li>
 </ul></li>
-<li><a href="#名词解释"><span class="toc-section-number">6</span> 名词解释</a></li>
-<li><a href="#尽职调查"><span class="toc-section-number">7</span> 尽职调查</a></li>
-<li><a href="#会计知识"><span class="toc-section-number">8</span> 会计知识</a></li>
-<li><a href="#语法帮助"><span class="toc-section-number">9</span> 语法帮助</a></li>
+<li><a href="#其他资料">其他资料</a></li>
+<li><a href="#语法帮助">语法帮助</a></li>
 </ul>
 </div>
 <h1 id="国家法律法规"><span class="header-section-number">1</span> 国家法律法规</h1>
@@ -57,7 +55,7 @@
 <li><a href="./上市发行/首次公开发行股票并上市管理办法.html">首次公开发行股票并上市管理办法</a></li>
 <li><a href="">首次公开发行股票并在创业板上市管理暂行办法</a></li>
 <li><a href="./上市发行/深圳证券交易所股票上市规则(2012).pdf">深圳证券交易所股票上市规则(2012)</a></li>
-<li><a href="./上市发行/上海证券交易所股票上市规则(2013).pdf">上海证券交易所股票上市规则(2013)</a></li>
+<li><a href="./上市发行/上海证券交易所股票上市规则.html">上海证券交易所股票上市规则</a>【2013】</li>
 </ol>
 <h2 id="再融资"><span class="header-section-number">2.2</span> 再融资</h2>
 <ol style="list-style-type: decimal">
@@ -159,11 +157,11 @@
 <h1 id="公司治理"><span class="header-section-number">5</span> 公司治理</h1>
 <h2 id="治理准则"><span class="header-section-number">5.1</span> 治理准则</h2>
 <ol style="list-style-type: decimal">
-<li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167722.htm">上市公司治理准则</a></li>
+<li><a href="./公司治理/上市公司治理准则.html">上市公司治理准则</a></li>
 </ol>
 <h2 id="股东和股东大会"><span class="header-section-number">5.2</span> 股东和股东大会</h2>
 <ol style="list-style-type: decimal">
-<li><a href="http://biz.sse.com.cn/cs/zhs/xxfw/flgz/regulations/listedco/listed20060320.html">上市公司股东大会规则</a></li>
+<li><a href="./公司治理/上市公司股东大会规则.html">上市公司股东大会规则</a></li>
 <li><a href="http://www.csrc.gov.cn/pub/newsite/ssb/ssflfg/bmgzjwj/ssgszl/200911/t20091110_167750.htm">上市公司与投资者关系工作指引</a></li>
 <li><a href="2006.6.16">国务院国有资产监督管理委员会关于规范上市公司国有股东行为的若干意见</a></li>
 <li><a href="2012.5.4">中国证券监督管理委员会关于进一步落实上市公司现金分红有关事项的通知</a></li>
@@ -187,19 +185,14 @@
 <li><a href="./公司治理/企业内部控制评价指引.pdf">企业内部控制评价指引</a></li>
 <li><a href="./公司治理/企业内部控制审计指引.pdf">企业内部控制审计指引</a></li>
 </ol>
-<h1 id="名词解释"><span class="header-section-number">6</span> 名词解释</h1>
-<ol style="list-style-type: decimal">
-<li><a href="./资本市场名词解释/名词目录.html">名词解释</a></li>
-</ol>
-<h1 id="尽职调查"><span class="header-section-number">7</span> 尽职调查</h1>
-<ol style="list-style-type: decimal">
-<li><a href="./尽职调查/保荐人尽职调查工作准则.html">保荐人尽职调查工作准则</a></li>
-</ol>
-<h1 id="会计知识"><span class="header-section-number">8</span> 会计知识</h1>
+<h1 id="其他资料" class="unnumbered">其他资料</h1>
 <ol style="list-style-type: decimal">
 <li><a href="./会计知识/企业会计准则.html">企业会计准则</a></li>
+<li><a href="./尽职调查/保荐人尽职调查工作准则.html">保荐人尽职调查工作准则</a></li>
+<li><a href="./资本市场名词解释/名词目录.html">名词解释</a></li>
+<li><a href="./案例研究/案例研究.html">案例研究</a></li>
 </ol>
-<h1 id="语法帮助"><span class="header-section-number">9</span> 语法帮助</h1>
+<h1 id="语法帮助" class="unnumbered">语法帮助</h1>
 <ol style="list-style-type: decimal">
 <li><a href="./关于站点/MarkDown语法帮助.html">MarkDown语法帮助</a></li>
 <li><a href="./关于站点/log.html">日志文件</a></li>
@@ -229,10 +222,10 @@
 --------------------------------------------------------------------------------</br>
 本站所有源文件都是由Pandoc's MarkDown完成，对其作者
 <a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
-<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！
 本站的静态page页面托管在
-<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过<a href="/blog/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/blog/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。但是由于编辑过程中可能出现疏漏，所以不对资料的真实性做任何保证，阅读时请仔细甄别！</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
