--- a/信息披露/上市公司信息披露管理办法.html
+++ b/信息披露/上市公司信息披露管理办法.html
@@ -117,10 +117,10 @@
 --------------------------------------------------------------------------------</br>
 本站所有源文件都是由Pandoc's MarkDown完成，对其作者
 <a href="http://johnmacfarlane.net/pandoc/demo/example9/pandocs-markdown.html" target=_blank>John MacFarlane]</a>和
-<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！</br>
+<a href="https://daringfireball.net/projects/markdown/" target=_blank>John Grube</a>表示真诚的感谢！
 本站的静态page页面托管在
-<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br></br>
-本站所有内容都来自于互联网上获得的资料，并经过<a href="/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。</br>
+<a href="https://www.github.com" target=_blank>GitHub</a>，对其提供的page服务实在是感激。</br>
+本站所有内容都来自于互联网上获得的资料，并经过<a href="/blog/resume.html">@songliheng</a>精心收集、整理汇编而成，欢迎指正。但是由于编辑过程中可能出现疏漏，所以不对资料的真实性做任何保证，阅读时请仔细甄别！</br>
 我个人对色彩感觉较差，虽对css略知一二，但实在配不出好看的页面，所以也欢迎页面美化的建议。</br>
 我的邮箱: songliheng_live_com
 </p>
