--- a/基本法律/中华人民共和国证券法.html
+++ b/基本法律/中华人民共和国证券法.html
@@ -51,7 +51,7 @@
 <p>　　第十二条　设立股份有限公司公开发行股票，应当符合《中华人民共和国公司法》规定的条件和经国务院批准的国务院证券监督管理机构规定的其他条件，向国务院证券监督管理机构报送募股申请和下列文件：<br />　　（一）公司章程；<br />　　（二）发起人协议；<br />　　（三）发起人姓名或者名称，发起人认购的股份数、出资种类及验资证明；<br />　　（四）招股说明书；<br />　　（五）代收股款银行的名称及地址；<br />　　（六）承销机构名称及有关的协议。<br />　　依照本法规定聘请保荐人的，还应当报送保荐人出具的发行保荐书。<br />　　法律、行政法规规定设立公司必须报经批准的，还应当提交相应的批准文件。</p>
 <p>　　第十三条　公司公开发行新股，应当符合下列条件：<br />　　（一）具备健全且运行良好的组织机构；<br />　　（二）具有持续盈利能力，财务状况良好；<br />　　（三）最近三年财务会计文件无虚假记载，无其他重大违法行为；<br />　　（四）经国务院批准的国务院证券监督管理机构规定的其他条件。<br />　　上市公司非公开发行新股，应当符合经国务院批准的国务院证券监督管理机构规定的条件，并报国务院证券监督管理机构核准。</p>
 <p>　　第十四条　公司公开发行新股，应当向国务院证券监督管理机构报送募股申请和下列文件：<br />　　（一）公司营业执照；<br />　　（二）公司章程；<br />　　（三）股东大会决议；<br />　　（四）招股说明书；<br />　　（五）财务会计报告；<br />　　（六）代收股款银行的名称及地址；<br />　　（七）承销机构名称及有关的协议。<br />　　依照本法规定聘请保荐人的，还应当报送保荐人出具的发行保荐书。</p>
-<p>　　第十五条　公司对公开发行股票所募集资金，必须按照招股说明书所列资金用途使用。改变招股说明书所列资金用途，必须经股东大会作出决议。擅自改变用途而未作纠正的，或者未经股东大会认可的，不得公开发行新股。</p>
+<p>　　第十五条　公司对公开发行股票所募集资金，必须按照招股说明书所列资金用途使用。<em>改变招股说明书所列资金用途，必须经股东大会作出决议</em>。擅自改变用途而未作纠正的，或者未经股东大会认可的，不得公开发行新股。</p>
 <p>　　第十六条　公开发行公司债券，应当符合下列条件：<br />　　（一）股份有限公司的净资产不低于人民币三千万元，有限责任公司的净资产不低于人民币六千万元；<br />　　（二）累计债券余额不超过公司净资产的百分之四十；<br />　　（三）最近三年平均可分配利润足以支付公司债券一年的利息；<br />　　（四）筹集的资金投向符合国家产业政策；<br />　　（五）债券的利率不超过国务院限定的利率水平；<br />　　（六）国务院规定的其他条件。<br />　　公开发行公司债券筹集的资金，必须用于核准的用途，不得用于弥补亏损和非生产性支出。<br />　　上市公司发行可转换为股票的公司债券，除应当符合第一款规定的条件外，还应当符合本法关于公开发行股票的条件，并报国务院证券监督管理机构核准。</p>
 <p>　　第十七条　申请公开发行公司债券，应当向国务院授权的部门或者国务院证券监督管理机构报送下列文件：<br />　　（一）公司营业执照；<br />　　（二）公司章程；<br />　　（三）公司债券募集办法；<br />　　（四）资产评估报告和验资报告；<br />　　（五）国务院授权的部门或者国务院证券监督管理机构规定的其他文件。<br />　　依照本法规定聘请保荐人的，还应当报送保荐人出具的发行保荐书。</p>
 <p>　　第十八条　有下列情形之一的，不得再次公开发行公司债券：<br />　　（一）前一次公开发行的公司债券尚未募足；<br />　　（二）对已公开发行的公司债券或者其他债务有违约或者延迟支付本息的事实，仍处于继续状态；<br />　　（三）违反本法规定，改变公开发行公司债券所募资金的用途。</p>
@@ -85,17 +85,17 @@
 <p>　　第四十四条　证券交易所、证券公司、证券登记结算机构必须依法为客户开立的账户保密。</p>
 <p>　　第四十五条　为股票发行出具审计报告、资产评估报告或者法律意见书等文件的证券服务机构和人员，在该股票承销期内和期满后六个月内，不得买卖该种股票。<br />　　除前款规定外，为上市公司出具审计报告、资产评估报告或者法律意见书等文件的证券服务机构和人员，自接受上市公司委托之日起至上述文件公开后五日内，不得买卖该种股票。</p>
 <p>　　第四十六条　证券交易的收费必须合理，并公开收费项目、收费标准和收费办法。<br />　　证券交易的收费项目、收费标准和管理办法由国务院有关主管部门统一规定。</p>
-<p>　　第四十七条　上市公司董事、监事、高级管理人员、持有上市公司股份百分之五以上的股东，将其持有的该公司的股票在买入后六个月内卖出，或者在卖出后六个月内又买入，由此所得收益归该公司所有，公司董事会应当收回其所得收益。但是，证券公司因包销购入售后剩余股票而持有百分之五以上股份的，卖出该股票不受六个月时间限制。<br />　　公司董事会不按照前款规定执行的，股东有权要求董事会在三十日内执行。公司董事会未在上述期限内执行的，股东有权为了公司的利益以自己的名义直接向人民法院提起诉讼。<br />　　公司董事会不按照第一款的规定执行的，负有责任的董事依法承担连带责任。</p>
+<p>　　第四十七条　<em>上市公司董事、监事、高级管理人员、持有上市公司股份百分之五以上的股东，将其持有的该公司的股票在买入后六个月内卖出，或者在卖出后六个月内又买入，由此所得收益归该公司所有</em>，公司董事会应当收回其所得收益。但是，证券公司因包销购入售后剩余股票而持有百分之五以上股份的，卖出该股票不受六个月时间限制。<br />　　公司董事会不按照前款规定执行的，股东有权要求董事会在三十日内执行。公司董事会未在上述期限内执行的，股东有权为了公司的利益以自己的名义直接向人民法院提起诉讼。<br />　　公司董事会不按照第一款的规定执行的，负有责任的董事依法承担连带责任。</p>
 <h2 id="第二节证券上市">第二节　证券上市</h2>
 <p>　　第四十八条　申请证券上市交易，应当向证券交易所提出申请，由证券交易所依法审核同意，并由双方签订上市协议。<br />　　证券交易所根据国务院授权的部门的决定安排政府债券上市交易。</p>
 <p>　　第四十九条　申请股票、可转换为股票的公司债券或者法律、行政法规规定实行保荐制度的其他证券上市交易，应当聘请具有保荐资格的机构担任保荐人。<br />　　本法第十一条第二款、第三款的规定适用于上市保荐人。</p>
 <p>　　<em>第五十条　股份有限公司申请股票上市，应当符合下列条件：<br />　　（一）股票经国务院证券监督管理机构核准已公开发行；<br />　　（二）公司股本总额不少于人民币三千万元；<br />　　（三）公开发行的股份达到公司股份总数的百分之二十五以上；公司股本总额超过人民币四亿元的，公开发行股份的比例为百分之十以上；<br />　　（四）公司最近三年无重大违法行为，财务会计报告无虚假记载。</em><br />　　证券交易所可以规定高于前款规定的上市条件，并报国务院证券监督管理机构批准。</p>
-<p>　　第五十一条　国家鼓励符合产业政策并符合上市条件的公司股票上市交易。</p>
+<p>　　第五十一条　国家<em>鼓励符合产业政策并符合上市条件的公司股票上市交易</em>。</p>
 <p>　　第五十二条　申请股票上市交易，应当向证券交易所报送下列文件：<br />　　（一）上市报告书；<br />　　（二）申请股票上市的股东大会决议；<br />　　（三）公司章程；<br />　　（四）公司营业执照；<br />　　（五）依法经会计师事务所审计的公司最近三年的财务会计报告；<br />　　（六）法律意见书和上市保荐书；<br />　　（七）最近一次的招股说明书；<br />　　（八）证券交易所上市规则规定的其他文件。</p>
 <p>　　第五十三条　股票上市交易申请经证券交易所审核同意后，签订上市协议的公司应当在规定的期限内公告股票上市的有关文件，并将该文件置备于指定场所供公众查阅。</p>
 <p>　　第五十四条　签订上市协议的公司除公告前条规定的文件外，还应当公告下列事项：<br />　　（一）股票获准在证券交易所交易的日期；<br />　　（二）持有公司股份最多的前十名股东的名单和持股数额；<br />　　（三）公司的实际控制人；<br />　　（四）董事、监事、高级管理人员的姓名及其持有本公司股票和债券的情况。</p>
 <p>　　第五十五条　上市公司有下列情形之一的，由证券交易所决定暂停其股票上市交易：<br />　　（一）公司股本总额、股权分布等发生变化不再具备上市条件；<br />　　（二）公司不按照规定公开其财务状况，或者对财务会计报告作虚假记载，可能误导投资者；<br />　　（三）公司有重大违法行为；<br />　　（四）公司最近三年连续亏损；<br />　　（五）证券交易所上市规则规定的其他情形。</p>
-<p>　　第五十六条　上市公司有下列情形之一的，由证券交易所决定终止其股票上市交易：<br />　　（一）公司股本总额、股权分布等发生变化不再具备上市条件，在证券交易所规定的期限内仍不能达到上市条件；<br />　　（二）公司不按照规定公开其财务状况，或者对财务会计报告作虚假记载，且拒绝纠正；<br />　　（三）公司最近三年连续亏损，在其后一个年度内未能恢复盈利；<br />　　（四）公司解散或者被宣告破产；<br />　　（五）证券交易所上市规则规定的其他情形。</p>
+<p>　　第五十六条　上市公司有下列情形之一的，由证券交易所决定终止其股票上市交易：<br />　　（一）公司股本总额、股权分布等发生变化<em>不再具备上市条件</em>，在证券交易所规定的期限内仍不能达到上市条件；<br />　　（二）公司不按照规定公开其财务状况，或者对财务会计报告作虚假记载，且拒绝纠正；<br />　　（三）公司最近三年连续亏损，在其后一个年度内未能恢复盈利；<br />　　（四）公司解散或者被宣告破产；<br />　　（五）证券交易所上市规则规定的其他情形。</p>
 <p>　　第五十七条　公司申请公司债券上市交易，应当符合下列条件：<br />　　（一）公司债券的期限为一年以上；<br />　　（二）公司债券实际发行额不少于人民币五千万元；<br />　　（三）公司申请债券上市时仍符合法定的公司债券发行条件。</p>
 <p>　　第五十八条　申请公司债券上市交易，应当向证券交易所报送下列文件：<br />　　（一）上市报告书；<br />　　（二）申请公司债券上市的董事会决议；<br />　　（三）公司章程；<br />　　（四）公司营业执照；<br />　　（五）公司债券募集办法；<br />　　（六）公司债券的实际发行数额；<br />　　（七）证券交易所上市规则规定的其他文件。<br />　　申请可转换为股票的公司债券上市交易，还应当报送保荐人出具的上市保荐书。</p>
 <p>　　第五十九条　公司债券上市交易申请经证券交易所审核同意后，签订上市协议的公司应当在规定的期限内公告公司债券上市文件及有关文件，并将其申请文件置备于指定场所供公众查阅。</p>
