--- a/资本市场名词解释/名词目录.html
+++ b/资本市场名词解释/名词目录.html
@@ -22,6 +22,8 @@
 <li><a href="./同业竞争.html">同业竞争</a></li>
 <li><a href="./董秘考试.html">董秘考试</a></li>
 <li><a href="./关联交易.html">关联交易</a></li>
+<li><a href="./发行审核基本要求.html">发行审核基本要求</a></li>
+<li><a href="./并购重组相关法律.html">并购重组相关法律</a></li>
 </ol>
 <div id="foot">
 
