--- a/上市发行/首次公开发行股票并上市管理办法.html
+++ b/上市发行/首次公开发行股票并上市管理办法.html
@@ -44,17 +44,20 @@
 <h2 id="第一节主体资格">第一节　主体资格</h2>
 <p>　　第八条　发行人应当是依法设立且合法存续的股份有限公司。<br />　　经国务院批准，有限责任公司在依法变更为股份有限公司时，可以采取募集设立方式公开发行股票。</p>
 <p>　　第九条　发行人自股份有限公司成立后，持续经营时间应当在3年以上，但经国务院批准的除外。<br />　　有限责任公司按原账面净资产值折股整体变更为股份有限公司的，持续经营时间可以从有限责任公司成立之日起计算。</p>
-<p>　　第十条　发行人的注册资本已足额缴纳，发起人或者股东用作出资的资产的财产权转移手续已办理完毕，发行人的主要资产不存在重大权属纠纷。</p>
+<p>　　第十条　发行人的注册资本已足额缴纳，发起人或者股东用作出资的资产的财产权转移手续已办理完毕，发行人的<em>主要资产不存在重大权属</em>纠纷。</p>
 <p>　　第十一条　发行人的生产经营符合法律、行政法规和公司章程的规定，符合国家产业政策。</p>
 <p>　　第十二条　发行人最近3年内主营业务和董事、高级管理人员没有发生重大变化，实际控制人没有发生变更。</p>
-<p>　　第十三条　发行人的股权清晰，控股股东和受控股股东、实际控制人支配的股东持有的发行人股份不存在重大权属纠纷。</p>
+<p>　　第十三条　发行人的<em>股权清晰，控股股东和受控股股东、实际控制人支配的股东持有的发行人股份不存在重大权属</em>纠纷。</p>
 <h2 id="第二节独立性">第二节　独立性</h2>
 <p>　　第十四条　发行人应当具有完整的业务体系和直接面向市场独立经营的能力。</p>
-<p>　　第十五条　发行人的资产完整。生产型企业应当具备与生产经营有关的生产系统、辅助生产系统和配套设施，合法拥有与生产经营有关的土地、厂房、机器设备以及商标、专利、非专利技术的所有权或者使用权，具有独立的原料采购和产品销售系统；非生产型企业应当具备与经营有关的业务体系及相关资产。</p>
+<p>　　第十五条　发行人的资产完整。生产型企业应当具备与生产经营有关的生产系统、辅助生产系统和配套设施，合法拥有与生产经营有关的土地、厂房、机器设备以及商标、专利、非专利技术的<em>所有权或者使用权</em>，具有独立的原料采购和产品销售系统；非生产型企业应当具备与经营有关的业务体系及相关资产。</p>
 <p>　　第十六条　发行人的人员独立。发行人的总经理、副总经理、财务负责人和董事会秘书等高级管理人员不得在控股股东、实际控制人及其控制的其他企业中担任除董事、监事以外的其他职务，不得在控股股东、实际控制人及其控制的其他企业领薪；发行人的财务人员不得在控股股东、实际控制人及其控制的其他企业中兼职。</p>
 <p>　　第十七条　发行人的财务独立。发行人应当建立独立的财务核算体系，能够独立作出财务决策，具有规范的财务会计制度和对分公司、子公司的财务管理制度；发行人不得与控股股东、实际控制人及其控制的其他企业共用银行账户。</p>
 <p>　　第十八条　发行人的机构独立。发行人应当建立健全内部经营管理机构，独立行使经营管理职权，与控股股东、实际控制人及其控制的其他企业间不得有机构混同的情形。</p>
-<p>　　第十九条　发行人的业务独立。发行人的业务应当独立于控股股东、实际控制人及其控制的其他企业，与控股股东、实际控制人及其控制的其他企业间不得有同业竞争或者显失公平的关联交易。</p>
+<p>　　第十九条　发行人的业务独立。发行人的业务应当独立于控股股东、实际控制人及其控制的其他企业，<em>与控股股东、实际控制人及其控制的其他企业间不得有同业竞争或者显失公平的关联交易</em>。</p>
+<blockquote>
+<p>【%尤其要注意这条，关联交易如果是按照市场公允价格，还说的过去，但是同业竞争经常是说不过去的，发审委的开发是：同业即竞争。%】</p>
+</blockquote>
 <p>　　第二十条　发行人在独立性方面不得有其他严重缺陷。</p>
 <h2 id="第三节规范运行">第三节　规范运行</h2>
 <p>　　第二十一条　发行人已经依法建立健全股东大会、董事会、监事会、独立董事、董事会秘书制度，相关机构和人员能够依法履行职责。</p>
