--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
 </ul>
 <h2 id="学习经历">学习经历</h2>
 <ul>
-<li>2011.09-2014.03　　　　　华中科技大学经济学院　　　　　　　　　　　　　　经济学硕士</li>
+<li>2011.09-　　　　　　　　 华中科技大学经济学院　　　　　　　　　　　　　　经济学硕士</li>
 <li>2003.09-2007.06　　　　　华中科技大学能源与动力工程学院　　　　　　　　　工科学士</li>
 </ul>
 <h2 id="近期状况">近期状况</h2>
